--- a/ok/bc/bc06-0.0.15.0.0.md
+++ b/ok/bc/bc06-0.0.15.0.0.md
@@ -8,7 +8,7 @@
 
 【讲解】 **松节苦燥温通之力较强，适用于痹证偏寒湿者。**为松科常绿大乔木油松、马尾松等的枝干的结节。以水浸润，切片，晒干生用。
 
-本品味苦性温，入肝经。功主祛风燥湿，舒筋通络，止痛，主要用于历节风痛，亦为风湿痹证常用药。脚气痠软、跌打损伤亦可配用。
+本品味苦性温，入肝经。功主祛风燥湿，舒筋通络，止痛，主要用于历节风痛，亦为风湿痹证常用药。脚气痿软、跌打损伤亦可配用。
 
 【临证应用】松节一味浸酒服，可治风湿痹痛，以本品性偏温燥，故尤以寒湿痹痛为宜，亦可加入羌活、秦艽、海风藤等祛风湿复方中应用。若配刘寄奴、苏木、三七等活血通络药，可治疗跌打损伤疼痛。温燥之性，易伤阴耗血，故阴虚血亏者不宜用。正如《本草汇言》所云：松节，气温性燥，如足膝筋骨，有风有湿，作痛作痠，痿弱无力者，用此立痊。倘阴虚髓乏，血燥有火者，宜斟酌用之。
 
