--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -1,8 +1,8 @@
-## 3.4元气
+## 3.4、元气
 
-### 1、人体的元气：
+### 1、人体的元气
 
-#### 1.1、什么是元气？
+#### 1.1、什么是元气
 
 元气，元为起始，气为能量。元气就是人体的起始能量，其对人体的作用，相当于阳光对自然界的作用。
 
@@ -10,9 +10,9 @@
 >
 > 《黄帝内经讲解-藏象学说-真气的生成和输布》
 
-> **阳气者若天与日，失其所则折寿而不彰(1)，故天运当以日光明。是故阳因而上，卫外者也(2)。**
+> **阳气者若天与日，失其所则折寿而不彰，故天运当以日光明。是故阳因而上，卫外者也。**
 >
-> 《素问·生气通天论》
+> ——《素问•生气通天论》
 
 人体的元气有很多别称，比如原气、真气等。
 
@@ -42,13 +42,13 @@
 
 元气与人体的固液气态物质形成一对平衡关系，元气既不能过多也不能过少，应在一个合理范围内波动。
 
-#### 1.2、元气是如何生成的？
+#### 1.2、元气是如何生成的
 
 元气由精转化而成。精为能源，元气为能量。精遍布全身，主要的精藏于五脏，尤其以肾为仓库。所以元气的产生也对应于精的分布，全身都可以产生，五脏产生的最重要，五脏中又尤其以肾为最多。
 
 >  原气根源于肾中，禀受于父母的先天之精，由肾中的精气所化生。
 >
-> 《黄帝内经讲解-藏象学说-真气的生成和输布》
+>  《黄帝内经讲解-藏象学说-真气的生成和输布》
 
 > 元气寓居肾脏，由肾总司。元气与水液在三焦中的输布运化，必须依靠脏气的推动。
 >
@@ -70,7 +70,7 @@
 
 > 三焦的功能有二。一为人体元气通行之通道。《难经•三十八难》指出，三焦“主持诸气”，《六十六难》亦说：“三焦者，**原气之别使也，主通利三气，经历于五脏六腑**。”原气，又名元气，通过三焦输布五脏六腑，激发，推动各脏腑组织的功能，因此三焦有总司人体气化的作用。
 >
-> 《黄帝内经讲解-藏象- 三焦的部位和功用》
+> 《黄帝内经讲解-藏象-三焦的部位和功用》
 
 《难经》指出，三焦是元气的别使。元气进入三焦，在上焦传输给心肺，中焦传输给脾胃，下焦传输给肾、大小肠、膀胱。如此，各脏腑才能有足够的能量来完成各自工作。
 
@@ -80,17 +80,17 @@
 >
 > **肾、大小肠、膀胱**赖下焦元气的气化作用，才能灌**渗水液，泌别清浊，外泄二便**。
 >
-> 《黄帝内经讲解-藏象- 三焦的部位和功用》
+> 《黄帝内经讲解-藏象-三焦的部位和功用》
 
-> 藏真散于肝，肝藏筋膜之气也⑴……藏真通于心，心藏血脉之气也(2)……藏真濡于脾，脾藏肌肉之气也(3)……藏真高于肺，以行营卫阴阳也⑷……藏真下于肾，肾藏骨髓之气也(5)。
+> 藏真散于肝，肝藏筋膜之气也……藏真通于心，心藏血脉之气也……藏真濡于脾，脾藏肌肉之气也……藏真高于肺，以行营卫阴阳也……藏真下于肾，肾藏骨髓之气也。
 >
-> 《素问.平人气象论》
+> ——《素问•平人气象论》
 
 元气作用于脏腑、经络，产生脏腑之气和经络之气。脏腑经络的气态物质在获得元气的能量后，在全身流转，能带动能量到达全身。所以说元气与谷气并而充身。
 
 > **真气者，所受于天，与谷气并而充身也。**
 >
-> 《灵枢•刺节真邪》
+> ——《灵枢•刺节真邪》
 
 > 人体之气，除以上四种外，还有“脏腑之气”、“经络之气”等。这些气均为元气所派生，元气分布于某一脏腑或某一经络，即成为某一脏腑或某一经络之气。它是构成各脏腑、经络的基本物质，又是推动和维持各脏腑经络进行生理活动的物质基础。
 >
@@ -98,19 +98,19 @@
 
 > 诸十二经脉者，皆系于生气之原。所谓生气之原者，谓十二经之根本也，谓肾间动气也。此五脏六腑之本，十二经脉之根，呼吸之门，三焦之原。一名守邪之神。故气者，人之根本也，根绝则茎叶枯矣。寸口脉平而死者，生气独绝于内也。
 >
-> 《难经-八难》
+> ——《难经•八难》
 
 > 元气通过三焦分布全身，内而脏腑，外而肤腠，无处不达。
 >
 > 《中医药学概论-藏象-气》
 
-三焦是元气通道，总管人体的气化功能。（三焦即是元气通道也是水液通道）
+三焦是元气通道，总管人体的气化功能。（三焦即是**元气通道**也是**水液通道**）
 
 > 三焦的功能有二。一为人体元气通行之通道。《难经•三十八难》指出，三焦“主持诸气”，《六十六难》亦说：“三焦者，**原气之别使也，主通利三气，经历于五脏六腑**。”原气，又名元气，通过三焦输布五脏六腑，激发，推动各脏腑组织的功能，因此三焦有总司人体气化的作用。
 >
-> 《黄帝内经讲解-藏象- 三焦的部位和功用》
+> 《黄帝内经讲解-藏象-三焦的部位和功用》
 
-#### 1.4 元气的失衡
+#### 1.4、元气的失衡
 
 肾中元气补充脏腑及形体的元气，其释放的量应在平衡范围之内，不多不少；其分配应该上、下、里、外均衡。
 
@@ -138,13 +138,13 @@
 
 > **阴阳之气各有多少，故曰三阴三阳也。**
 >
-> 《素问·天元纪大论》
+> ——《素问•天元纪大论》
 
 每一个区域都包含对应的脏腑和相应经络的管理范围。下面分别说明：
 
 ##### 太阳之气
 
-以太阳为例：太阳区域包括手太阳小肠经、小肠腑、足太阳膀胱经、膀胱腑。太阳区域能量的合适与否（不能过多或过少）影响两个经络通道极其附近部位的健康程度，也影响小肠腑和膀胱腑的功能正常与否。
+以太阳为例：太阳区域包括手太阳小肠经、小肠腑、足太阳膀胱经、膀胱腑。太阳区域能量的合适与否（不能过多或过少）影响两个经络通道及其附近部位的健康程度，也影响小肠腑和膀胱腑的功能正常与否。
 
 其它五个区域也是类似的道理。
 
@@ -156,7 +156,7 @@
 
 > **伤寒一日，巨阳受之，故头项痛腰脊强。**
 >
-> 《素问•热论》
+> ——《素问•热论》
 
 > 人身经络，三阳为表，三阴为里。太阳为六经之长，统摄阳分，主一身之表，故为人身之藩蓠。邪气入侵机体，必首先犯于皮毛，太阳首当其冲。太阳之脉上入巅，下项行腰脊。风寒外束，太阳经脉运行受阻，营卫不和，经气不利，故见头项痛，腰脊牵强不舒等症。
 >
@@ -174,7 +174,7 @@
 
 > **二曰阳明受之，阳明主肉，其脉侠鼻络于目，故身热目疼而鼻干，不得卧也。**
 >
-> 《素问•热论》
+> ——《素问•热论》
 
 > 阳明为二阳，故邪在太阳不解，传入阳明。阳明主肌肉，为多气多血之经，故邪入阳明，正邪相争剧烈，身热尤甚。张仲景据此认为，病邪侵袭阳明，多从燥化，故谓“胃家实”，以胃肠燥热实为其特点。身热是阳明病证的主要症状，《内经》在六经病症中唯独提到阳明病有身热一症，从而突出了阳明病的这一特点。如张景岳说：“伤寒多发热，而独此云身热者，盖阳明主肌肉，身热尤甚也。”阳明之脉挟鼻而络于目，邪在阳明，上干目鼻，则鼻干而目疼。“胃不和则卧不安”，邪热在胃，上扰神明，故不得卧。
 >
@@ -190,7 +190,7 @@
 
 > **三日少阳受之，少阳主胆，其脉循胁络于耳，故胸胁痛而耳聋。**
 >
-> 《素问•热论》
+> ——《素问•热论》
 
 > 少阳胆经起于目锐毗，绕耳前后，至肩下循胁里络肝属胆。
 >
@@ -206,9 +206,9 @@
 
 > **四日太阴受之，太阴脉布胃中络于嗌，故腹满而嗌干。**
 >
-> 《素问•热论》
+> ——《素问•热论》
 
-> .....足太阴脾经起于足大趾之端，上膝股入腹，属脾络胃，上挟咽连舌本，散舌下。”.
+> .....足太阴脾经起于足大趾之端，上膝股入腹，属脾络胃，上挟咽连舌本，散舌下。
 >
 > 《黄帝内经讲解-第七章病证学说-二、伤寒类-证候》
 
@@ -222,7 +222,7 @@
 
 > **五日少阴受之。少阴脉贯肾络于肺，系舌本，故口燥舌干而渴。**
 >
-> 《素问•热论》
+> ——《素问•热论》
 
 > 足少阴肾脉，起于足小趾之下，斜趋足心，循内踝上股，贯脊属肾，上贯肝膈，入肺中，循喉咙，挟舌本。
 >
@@ -238,7 +238,7 @@
 
 > **六曰厥阴受之，厥阴脉循阴器而络于肝，故烦满而囊缩。**
 >
-> 《素问•热论〉〉
+> ——《素问•热论》
 
 > 厥阴肝脉循阴股，过阴器，抵少腹，上贯膈布胁肋。
 >
@@ -256,7 +256,7 @@
 >
 > 《黄帝内经讲解-阴阳五行学说-阳气的重要性》
 
-#### 2.2、气血在身体中的分配：
+#### 2.2、气血在身体中的分配
 
  气态物质与血的分配按照三阴三阳区域进行配置，按照内经所说：
 
@@ -268,9 +268,9 @@
 
 > **夫人之常数，太阳常多血少气，少阴常少血多气。阳明常多气多血，少阳常少血多气，厥阴常多血少气。太阴常多气少血，此天之常数。**
 >
-> 《素问·血气形志篇》...
+> ——《素问•血气形志篇》
 >
-> 正如张介宾所说：“其所以然者，太阳少阴，一表一里，同属于寒水，故阴多阳少；少阳厥阴，一表一里，同属于相火，故阳多阴少，阳明太阴，一表一里，同属于湿土，而为水谷之海，故阴阳俱多。”即杨上善所说：“手足少阴太阳多血少气，以阴多阳少也。手足厥阴少阳多气少血，以阳多阴少也。手足太阴阳明多血气，以阴阳俱多谷气也。此又授人血气多少之常数也”。《内经》中有关气血多少的记载，可见于《灵枢·五音五味》、《灵枢·九针论》等篇，但与《素问》所记不同，多数注家认为《灵枢》有误。...
+> 正如张介宾所说：“其所以然者，太阳少阴，一表一里，同属于寒水，故阴多阳少；少阳厥阴，一表一里，同属于相火，故阳多阴少，阳明太阴，一表一里，同属于湿土，而为水谷之海，故阴阳俱多。”即杨上善所说：“手足少阴太阳多血少气，以阴多阳少也。手足厥阴少阳多气少血，以阳多阴少也。手足太阴阳明多血气，以阴阳俱多谷气也。此又授人血气多少之常数也”。《内经》中有关气血多少的记载，可见于《灵枢•五音五味》、《灵枢•九针论》等篇，但与《素问》所记不同，多数注家认为《灵枢》有误。...
 >
 > 凡疮疡发生在手足太阳经脉循行的部位，由于该经具有多血少气的特点，除可兼见恶寒发热；头痛项强、关节重痛等全身症状外，局部症状往往反映出营血凝滞，毒难外达的特点（如皮色紫暗，根足散漫，疮口难敛，病程较长等），故治疗大法，应注意活血、补托。凡疮疡发生在手足阳明经脉循行的部位，由于该经具有多血多气的特点，除可见心烦口渴，呕吐不食等全身症状外，局部症状往往反映出热毒壅盛，易溃易敛的特点，故治疗大法，宜行气、活血、泻热、攻坚。凡疮疡发生于手足少阳经脉循行的部位，由于该经具有多气少血的特点，除可兼见寒热往来，口苦、咽干、目眩等全身症状外，局部症状往往反映出郁滞较甚，收敛较难的特点，故治疗大法应注意行气、滋养。可见掌握阴阳经气血多少的特点，对于指导临床辨证施治，具有实践意义。...
 >
@@ -278,7 +278,7 @@
 
 
 
-#### 2.3、三阴三阳的开阖问题：
+#### 2.3、三阴三阳的开阖问题
 
 中医中对于开阖枢的问题解释还不够清晰，大体上指人体精、气、血等要素在人体的升降出入流转过程中，三阴三阳各自起到特殊作用。这里引教材中的相关叙述供参考。
 
@@ -294,13 +294,13 @@
 >
 > “少阴为枢”，是指少阴居太阴，厥阴之间，为人身阴阳之本，主管开阖之权，所以叫做“枢”。
 >
-> 正如吴崑所说：“太阴居中，敷布阴气为之开；厥阴谓之尽阴，受纳绝阴之气谓之阖；少阴为肾，精气充满，则脾职其升，肝职其阖，肾气不充，则开阖失常，是少阴为枢轴也。
+> 正如吴崑所说：“太阴居中，敷布阴气为之开；厥阴谓之尽阴，受纳绝阴之气谓之阖；少阴为肾，精气充满，则脾职其升，肝职其阖，肾气不充，则开阖失常，是少阴为枢轴也。”
 >
-> ”张介宾也说：“太阴为开，居阴分之表也；厥阴为阖，居阴分之里也；少阴为枢，居阴分之中也。开者主出，阖者主入，枢者主出入之间。”张注虽从表里而言，其实也以脏气功能为本。
+> 张介宾也说：“太阴为开，居阴分之表也；厥阴为阖，居阴分之里也；少阴为枢，居阴分之中也。开者主出，阖者主入，枢者主出入之间。”张注虽从表里而言，其实也以脏气功能为本。
 >
 > 《黄帝内经讲解-阴阳五行学说-三阴三阳的离合关系》
 
-###### 	开合病理
+##### 	开阖病理
 
 > 例如邪犯太阳之表，太阳之气不能主“开”，卫外功能失常，或腠理闭阻而无汗，或腠理空疏而汗出，都是开之不及或开之太过的表现。故仲景以麻黄、桂枝两方立法，恢复太阳主开的作用。其它兼证、变证等病，皆由太阳初病失治所致。
 >
@@ -318,7 +318,7 @@
 >
 > 《黄帝内经讲解-阴阳五行学说-三阴三阳的离合关系》
 
-## 题目
+### 题目
 
-1. 元气是人体的原动力，其由----转化而来，分布于全身。脏、腑、全身皆有元气，五脏较多，其中尤以----脏最多，是元气的大本营。
-2. 人体三阴三阴代表人体阳气与阴气的不同比例，其分布是有规律的。比如太阳区域指的是手太阳----腑和足太阳------腑，及其各自的经络。
+1. 元气是人体的原动力，其由 __ __ 转化而来，分布于全身。脏、腑、全身皆有元气，五脏较多，其中尤以 __ __ 脏最多，是元气的大本营。
+2. 人体三阴三阴代表人体阳气与阴气的不同比例，其分布是有规律的。比如太阳区域指的是手太阳 __ __ 腑和足太阳 __ __ 腑，及其各自的经络。
