--- a/ok/bc/bc02-0.1.2.0.0.md
+++ b/ok/bc/bc02-0.1.2.0.0.md
@@ -6,7 +6,7 @@
 
 【讲解】 (1)阳强：此指火热强盛的病证。(2)疫痢：指痢疾有较强传染性者，类似现代医学之中毒性痢疾。(3)积聚结癖：指腹内结块，隐匿于两胁之间。(4)淋闭：淋指小便时点滴而下，闭指尿闭不出。此指小便急迫、涩痛、排尿困难，甚或点滴不出的病证。(5)瘰疬：又名老鼠疮。病发于颈项和耳前后者，亦名疬子颈。另外，腋下及鼠蹊部亦多发病。
 
-**朴硝、芒硝、元明粉以润泻为主要功效，具有泻热导滞，润燥软坚作用。**芒硝为含硫酸钠的天然矿物经精制而成的结晶体。取天然产品用热水溶解、过滤，冷却析出的结最，通称朴硝或皮硝；再取萝卜切片，置锅内加水与朴硝共煮，滤去萝卜及杂质，将滤液冷却，结成白色细芒状结晶，即芒硝；芒硝经风化而成粉者，名风化硝；将芒硝同甘草煎炼，析出的晶块，经风化后成为白色粉末为玄明粉，又叫元明粉。
+**朴硝、芒硝、元明粉以润泻为主要功效，具有泻热导滞，润燥软坚作用。**芒硝为含硫酸钠的天然矿物经精制而成的结晶体。取天然产品用热水溶解、过滤，冷却析出的结晶，通称朴硝或皮硝；再取萝卜切片，置锅内加水与朴硝共煮，滤去萝卜及杂质，将滤液冷却，结成白色细芒状结晶，即芒硝；芒硝经风化而成粉者，名风化硝；将芒硝同甘草煎炼，析出的晶块，经风化后成为白色粉末为玄明粉，又叫元明粉。
 
 本品咸苦性寒。入胃、大肠经。咸能软坚，苦则泄降，寒可胜热。故能荡涤肠胃实热而除燥，以治实热积滞，大便燥结，谵语发狂等证。但本品泻热推荡之力颇猛，若病非实热燥结者，切勿妄投。故成无己说：结不至坚者，不可用也。孕妇忌用。此外，外敷痈肿疮毒，目赤咽痛，口疮等证，有清热消肿之功。
 
