--- a/ok/bc/bc06-0.0.20.0.0.md
+++ b/ok/bc/bc06-0.0.20.0.0.md
@@ -8,7 +8,7 @@
 
 白花蛇性善走窜，祛风力大，对风湿瘫痪，半身不遂及麻风疥癣等证，均有一定疗效。乌梢蛇甘平无毒，与白花蛇功用同而作用稍逊。蛇蜕为多种蛇类自然蜕下的皮膜，功能祛风定惊，止痒退翳，用于小儿惊风，皮肤搔痒等证。
 
-虎骨善能搜风止痛，并可健骨，对风邪偏胜的关节走注疼痛及肝肾虚弱的腰膝痠软之证，疗效颇着。络石藤以祛风通络为特长，治风湿痹痛，筋脉拘挛，关节不利常配伍应用。松节苦燥温通之力较强，痹证偏湿者尤为适宜。海桐皮祛风湿又兼泄热，风湿痹证偏湿热者及湿热下注，足膝热痛者用之有效，并可外用疗疥癣。蚕沙祛风湿，和胃化湿，除用于痹痛，还用于霍乱吐泻转筋。桑枝、石南叶、天仙藤均祛风通络为主要功效，治风湿痹痛，拘挛疼痛常配用。
+虎骨善能搜风止痛，并可健骨，对风邪偏胜的关节走注疼痛及肝肾虚弱的腰膝痿软之证，疗效颇着。络石藤以祛风通络为特长，治风湿痹痛，筋脉拘挛，关节不利常配伍应用。松节苦燥温通之力较强，痹证偏湿者尤为适宜。海桐皮祛风湿又兼泄热，风湿痹证偏湿热者及湿热下注，足膝热痛者用之有效，并可外用疗疥癣。蚕沙祛风湿，和胃化湿，除用于痹痛，还用于霍乱吐泻转筋。桑枝、石南叶、天仙藤均祛风通络为主要功效，治风湿痹痛，拘挛疼痛常配用。
 
 祛风湿药功用归纳简表
 
