--- a/ok/wk/wk05-0.1.0.0.0.md
+++ b/ok/wk/wk05-0.1.0.0.0.md
@@ -24,7 +24,7 @@
 
 托法是用补益气血的药物和透脓的药物，促使疮疡脓出毒泻，肿痛消退。即“托者，起也”之意，它包括透脓法和补托法。
 
-1.透脓法、用透托的药物，使疮疡毒邪移深就浅，早日成脓、出脓，不致脓毒旁窜深溃的疗法。适用于肿疡正气不虚，邪气结聚，形症已成，毒邪深沉散漫，不能高突成脓者，或脓成不溃者。常用药物有穿山甲、皂角刺等，但须与清热解毒药同时使用。在内痈中脓成者，可加用消痈排脓药物，如肠痈中加红藤、败酱草，肺痈中加鱼腥草、冬瓜仁等。临床常用方剂有透脓散等。
+1.透脓法：用透托的药物，使疮疡毒邪移深就浅，早日成脓、出脓，不致脓毒旁窜深溃的疗法。适用于肿疡正气不虚，邪气结聚，形症已成，毒邪深沉散漫，不能高突成脓者，或脓成不溃者。常用药物有穿山甲、皂角刺等，但须与清热解毒药同时使用。在内痈中脓成者，可加用消痈排脓药物，如肠痈中加红藤、败酱草，肺痈中加鱼腥草、冬瓜仁等。临床常用方剂有透脓散等。
 
 2.补托法：用益气补血的药物合透脓的药物使正虚者不致毒邪内陷，尽早出脓泄毒、肿消痛止的疗法。适用于肿疡毒势亢盛，正气已虚，不能托毒外出，以致疮形平塌，根盘散漫，难溃难腐，或溃后脓水稀少，坚肿不消，并出现身热、精神不振、脉数无力等症者。常用药物如：党参、黄芪、白术、穿山甲、皂角刺、甘草等。常用方剂如托里消毒散等。
 
