--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -6,7 +6,7 @@
 
 一、箍围消散法
 
-箍围消散法是运用活血、行气、祛风、解毒、消肿、定痛等药物箍贴围敷疮疡之法。此法可使疮毒收束，不致扩散。证势轻者可以消散，证势重看可使毒气结聚，疮形缩小高突，促使早日成脓和破溃。疮疡破溃后，但余毒未消，也可用本法来消肿，截其余毒。本法运用成功，能使疮疡消散于无形，缩短疗程，是最为理想的方法。所以它在外治法中占有重要位置。
+箍围消散法是运用活血、行气、祛风、解毒、消肿、定痛等药物箍贴围敷疮疡之法。此法可使疮毒收束，不致扩散。证势轻者可以消散，证势重者可使毒气结聚，疮形缩小高突，促使早日成脓和破溃。疮疡破溃后，但余毒未消，也可用本法来消肿，截其余毒。本法运用成功，能使疮疡消散于无形，缩短疗程，是最为理想的方法。所以它在外治法中占有重要位置。
 
 适应证：主要用于疮疡初期，凡肿疡之势散漫不聚而无集中之硬块者，均可使用本法。若溃后，肿势仍存，余毒未尽者，亦可用之。
 
