--- a/ok/gl/gl05-0.1.4.0.0.md
+++ b/ok/gl/gl05-0.1.4.0.0.md
@@ -4,7 +4,7 @@
 
 舌面划分为四部分，并反映各部分所属的脏腑（或三焦）的病变（图45）。舌尖属心肺（上焦)，舌中属脾胃（中焦），舌根属肾（下焦），舌两边属肝胆（舌诊的五脏分属部位，在舌诊形成和发展过程中，略有出入，但舌尖属心肺，舌中属脾胃，舌根属肾是一致的）。
 
-![](img/5图45.jpg)
+![](img/5图45-2.jpg)
 
 #### （一）舌苔
 
