update ok/wk/wk07.md. 了解乳痨肿块取特点，修改为乳痨肿块的特点。

--- a/ok/wk/wk07.md
+++ b/ok/wk/wk07.md
@@ -10,4 +10,4 @@
 
 2.熟悉乳衄与有关病的鉴别诊断和治疗方法。
 
-3.了解乳房和脏腑经络的关系，了解乳头破碎是引起乳痈、乳发的主要原因，了解乳痈的发病原因、乳发与乳痈的区别，了解乳痨肿块取特点并与乳房其它慢肿块相鉴别，了解乳癖、乳腺增生病与乳岩的鉴别、乳疬肿块的特点，了解不同性质的乳漏在症状和治疗上的区别。
+3.了解乳房和脏腑经络的关系，了解乳头破碎是引起乳痈、乳发的主要原因，了解乳痈的发病原因、乳发与乳痈的区别，了解乳痨肿块的特点并与乳房其它慢肿块相鉴别，了解乳癖、乳腺增生病与乳岩的鉴别、乳疬肿块的特点，了解不同性质的乳漏在症状和治疗上的区别。
