--- a/ok/bc/bc02-0.2.1.0.0.md
+++ b/ok/bc/bc02-0.2.1.0.0.md
@@ -1,6 +1,6 @@
 ### 大麻仁
 
-〔原文〕**甘平滑利，脾胃大肠之药。缓脾润燥，治阳明病胃热汗多而便难。**三者皆燥也，汗出愈多，则津枯而大便愈燥。仲景治脾约有麻仁丸。成无己曰：脾欲缓，急食甘以缓之。麻仁之甘，以缓脾润燥。张子和曰：诸燥皆三阳病。**破积血，利小便，通乳催生。又木穀也，亦能治风。极难去壳，帛裹置沸汤，待冷，悬井中一夜，晒干，就新瓦上挼去壳，捣用。畏茯苓、白薇、牡蛎。**
+〔原文〕**甘平滑利，脾胃大肠之药。缓脾润燥，治阳明病胃热汗多而便难。**<small>三者皆燥也，汗出愈多，则津枯而大便愈燥。仲景治脾约有麻仁丸。成无己曰：脾欲缓，急食甘以缓之。麻仁之甘，以缓脾润燥。张子和曰：诸燥皆三阳病。</small>**破积血，利小便，通乳催生。又木穀也，亦能治风。极难去壳，帛裹置沸汤，待冷，悬井中一夜，晒干，就新瓦上挼去壳，捣用。畏茯苓、白薇、牡蛎。**
 
 【讲解】**大麻仁以润下为主要功效，有润燥滑肠，通便的作用。**大麻仁，即火麻仁。为桑科一年生植物大麻的成熟果实。拣去杂质及残留外壳，取净仁，打碎用。
 
