update ok/ya/ya01-0.1.0.0.0.md. 揉荒爪幕, 应为 揲荒爪幕

--- a/ok/ya/ya01-0.1.0.0.0.md
+++ b/ok/ya/ya01-0.1.0.0.0.md
@@ -1,6 +1,6 @@
 ## 1.1 扁鹊治尸厥案
 
-扁鹊过虢。虢太子死，扁鹊至虢宫门下，问中庶子喜方者曰：太子何病，国中治穰过于众事？中庶子曰：太子病血气不时，交错而不得泄，暴发于外，则为中害。精神不能止邪气，邪气蓄积而不得泄，是以阳缓而阴急①，故暴蹶②而死。扁鹊曰：其死何如时？曰：鸡鸣至今。曰：收乎？曰：未也，其死未能半日也。言臣齐勃海秦越人也，家在于郑，未尝得望精光侍谒于前也。闻太子不幸而死，臣能生之。中庶子曰：先生得无诞之乎？何以言太子可生也！臣闻上古之时，医有俞跗，治病不以汤液醴酒，鑱石挢引，案扤毒熨，一拨见病之应，因五脏之输，乃剖皮解肌，诀脉结筋，搦髓脑，揉荒爪幕，湔浣肠胃，漱涤五藏，练精易神。先生之方能若是，则太子可生也；不能若是而欲生之，曾不可以告咳婴之儿！终日，扁鹊仰天叹曰：夫子之为方也，若以管窥天，以郄视文。越人之为方也，不待切脉望色听声写形，言病之所在。闻病之阳，论得其阴；闻病之阴，论得其阳。病应见于大表，不出千里，决者至众，不可曲止也。子以吾言为不诚，试入诊太子，当闻其耳鸣而鼻张，循其两股，以至于阴，当尚温也。
+扁鹊过虢。虢太子死，扁鹊至虢宫门下，问中庶子喜方者曰：太子何病，国中治穰过于众事？中庶子曰：太子病血气不时，交错而不得泄，暴发于外，则为中害。精神不能止邪气，邪气蓄积而不得泄，是以阳缓而阴急①，故暴蹶②而死。扁鹊曰：其死何如时？曰：鸡鸣至今。曰：收乎？曰：未也，其死未能半日也。言臣齐勃海秦越人也，家在于郑，未尝得望精光侍谒于前也。闻太子不幸而死，臣能生之。中庶子曰：先生得无诞之乎？何以言太子可生也！臣闻上古之时，医有俞跗，治病不以汤液醴酒，鑱石挢引，案扤毒熨，一拨见病之应，因五脏之输，乃剖皮解肌，诀脉结筋，搦髓脑，揲荒爪幕，湔浣肠胃，漱涤五藏，练精易神。先生之方能若是，则太子可生也；不能若是而欲生之，曾不可以告咳婴之儿！终日，扁鹊仰天叹曰：夫子之为方也，若以管窥天，以郄视文。越人之为方也，不待切脉望色听声写形，言病之所在。闻病之阳，论得其阴；闻病之阴，论得其阳。病应见于大表，不出千里，决者至众，不可曲止也。子以吾言为不诚，试入诊太子，当闻其耳鸣而鼻张，循其两股，以至于阴，当尚温也。
 
 ……扁鹊曰：若太子病，所谓尸蹶③也。夫以阳入阴中，动胃繵缘④，中经维络，别下于三焦、膀胱，是以阳脉下遂，阴脉上争⑤，会气闭而不通⑥，阴上而阳内行⑦，下内鼓而不起⑧，上外绝而不为使⑨，上有绝阳之络⑩，下有破阴之纽⑪，破阴绝阳，（之）色（已）废脉乱⑫，故形静如死状。太子未死也。未以阳入阴支兰藏者生⑬，以阴入阳支兰藏者死⑭。凡此数事，皆五藏蹶中之时暴作也。良工取之，拙者疑殆。
 
