update ok/wk/wk09-0.2.0.0.0.md. 原文“既不于皮肤粘连，又不与基底组织粘连。”应为“既不与皮肤粘连，又不与基底组织粘连。”电子版已改。

--- a/ok/wk/wk09-0.2.0.0.0.md
+++ b/ok/wk/wk09-0.2.0.0.0.md
@@ -10,7 +10,7 @@
 
 （一）辨证要领
 
-触诊是诊断的关键。肿块位于皮下，活动，既不于皮肤粘连，又不与基底组织粘连。肿块有弹性，以手按之凹陷，放手后又复起。再根据发病部位与发生多少便可初步诊断。
+触诊是诊断的关键。肿块位于皮下，活动，既不与皮肤粘连，又不与基底组织粘连。肿块有弹性，以手按之凹陷，放手后又复起。再根据发病部位与发生多少便可初步诊断。
 
 （二）论治要点
 
