update ok/ya/ya01-0.2.0.0.0.md. 痏（wei伟），电子版的没有调，改为 痏（wěi伟）

--- a/ok/ya/ya01-0.2.0.0.0.md
+++ b/ok/ya/ya01-0.2.0.0.0.md
@@ -8,7 +8,7 @@
 
 ①齐闵王：战国时齐国国君（前301〜284年在位）。
 
-②疾：宋•王钦若等《册府元龟•医术一》载为“疾痏”。痏（wei伟），即疮疡，在本案疑为内痈之类。
+②疾：宋•王钦若等《册府元龟•医术一》载为“疾痏”。痏（wěi伟），即疮疡，在本案疑为内痈之类。
 
 ③宋：先秦古国名，曾建都于今河南[商丘](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.1.3.5.md)南，前286年被齐所灭。
 
