--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -1,4 +1,4 @@
-# 3.5人体的天气和地气:
+## 3.5、人体的天气和地气
 
 前面的津液、血、元气是分别叙述，如果将这几种要素整合起来形成人体的平衡的内环境，就形成了人体的天地。
 
@@ -6,19 +6,19 @@
 
 > “人以天地之气生，四时之法成。”
 >
-> 《黄帝内经讲解--天地形气的相互关系及其作用》
+> 《黄帝内经讲解-天地形气的相互关系及其作用》
 
-> **天食人以五气，地食人以五味(1)。五气入鼻，藏于心肺，上使五色修明，音声能彰(2)。五味入口，藏于肠胃，味有所藏，以养五气(3)，气和而生，津液相成，神乃自生(4)。**
+> **天食人以五气，地食人以五味。五气入鼻，藏于心肺，上使五色修明，音声能彰。五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。**
 >
-> 《素问•六节藏象论》
+> ——《素问•六节藏象论》
 
-> **阳者，天气也，主外；阴者，地气也，主内（1）。故阳道实，阴道虚（2）。**
+> **阳者，天气也，主外；阴者，地气也，主内。故阳道实，阴道虚。**
 >
-> 《素问·太阴阳明论》
+> ——《素问•太阴阳明论》
 
 下面分别介绍人体的天气和地气。
 
-## 1、人体天气
+### 1、人体天气
 
 人体的天气指的是人体中的气态物质，以空气、水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：营气、卫气、宗气、脏腑之气。
 
@@ -26,47 +26,47 @@
 
 营气是中焦脾胃消化的水谷之气中的精纯部分，其功能是营养全身，内含脏腑，外括形体。
 
-> **中焦亦并胃中，出上焦之后（1），此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉，乃化而为血（2），以奉生身，莫贵于此，故独得行于经隧，命曰营气（3）。**
+> **中焦亦并胃中，出上焦之后，此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉，乃化而为血，以奉生身，莫贵于此，故独得行于经隧，命曰营气。**
 >
-> 《黄帝内经讲解-藏象- 三焦的部位和功用》
+> 《黄帝内经讲解-藏象-三焦的部位和功用》
 
-##### 循行：
+##### 循行
 
 从中焦注入手太阴肺脉，然后按照十二经顺序依次流转，一日夜行五十周。
 
 > 营气则沿十二经脉循行次序运行，所不同的是，营卫的循行，在《内经》和历代注家中，**某些方面说法颇不一致，尚有待今后进一步研究解决**。
 >
-> 《黄帝内经讲解-人与自然- 营卫运行的昼夜节律》
+> 《黄帝内经讲解-人与自然-营卫运行的昼夜节律》
 
-##### 与血的关系：
+##### 与血的关系
 
-营气是气态物质，血是液态物质。营气循行于经络之中，与血关系密切。营气注入脉中，就成为血的组成部分。反之，若不注入脉，则是气态物质。所以可以把营气理解为气态的血，血理解为液态的营气。
+营气是气态物质，血是液态物质。营气循行于经络之中，与血关系密切。营气注入脉中，就成为血的组成部分。反之，若不注入脉，则是气态物质。所以可以把**营气理解为气态的血，血理解为液态的营气**。
 
 血循行于血管脉道中，营气循行于经络中，两者不可混为一谈。
 
-> **营者，水谷之精气也，和调于五藏，洒陈于六府，乃能入于脉也。故循脉上下，贯五藏，络六府也(1)。**...
+> **营者，水谷之精气也，和调于五藏，洒陈于六府，乃能入于脉也。故循脉上下，贯五藏，络六府也。**...
 >
 > 营气清柔，所以能**灌注于血脉**之中，成为**血液的组成部分**，循着经脉，贯通五脏，联络六腑，运行全身，发挥其营养作用。..
 >
-> **营气者，泌其津液，注之于脉，化以为血(1),以荣四末，内注五藏六府，以应刻数焉⑴。**...
+> **营气者，泌其津液，注之于脉，化以为血，以荣四末，内注五藏六府，以应刻数焉。**...
 >
 > 营气柔和，循行于经脉之中，**与津液相和合，化生为血液**。营气与血，同行脉中，营气为血的组成部分，**血液由营气和合津液**变化而成，**营气与血，可分而不可离**，故常“营血”并称。...
 >
-> **营气之道。内谷为宝(1)。谷入于胃，乃传之肺，流溢于中，布散于外(2)。精专者，行于经隧，常营无已，终而复始，是谓天地之纪(3)。**...
+> **营气之道。内谷为宝。谷入于胃，乃传之肺，流溢于中，布散于外。精专者，行于经隧，常营无已，终而复始，是谓天地之纪。**...
 >
 > 就营气的生成而言，营气是水谷精气所化生的营养物质，源于脾胃。中焦有脾胃居其内，其功能是脾胃功能的概括，营气既由脾胃所化生的水谷精气的精纯部分所生成，所以说营气出于中焦。
 >
 > 其次就营气的运行而言，营气源于脾胃，出中焦后，注**手太阴肺经，然后循十二经，昼夜不息**，运行于全身上下内外各部，所以从营气的运行看，也可认为营气出于中焦。
 >
-> 《黄帝内经讲解-藏象- *营*卫的生成和功能》
+> 《黄帝内经讲解-藏象-*营*卫的生成和功能》
 
 #### 1.2、卫气
 
-##### 产生:
+##### 产生
 
 卫气根源于下焦肾精转化的阳气，补充于中焦脾胃消化的水谷之气中的彪悍部分，宣发于上焦。
 
-> 卫气除根于下焦命门阳气，又赖上焦的宣发以外，卫气也由水谷精气所化生，还必须依靠水谷精气的不断充养，才能发挥作用。因此可以认为卫气根源于下焦，资生于中焦，宣发于上焦，卫气与三焦均有密切的联系•
+> 卫气除根于下焦命门阳气，又赖上焦的宣发以外，卫气也由水谷精气所化生，还必须依靠水谷精气的不断充养，才能发挥作用。因此可以认为卫气根源于下焦，资生于中焦，宣发于上焦，卫气与三焦均有密切的联系。
 >
 > 《黄帝内经讲解-藏象-营卫的生成》
 
@@ -76,7 +76,7 @@
 >
 > 《黄帝内经讲解-藏象-营卫的生成》
 
-##### 循行：
+##### 循行
 
 卫气行于经络之中，血脉之外。
 
@@ -102,11 +102,12 @@
 
 卫气正常情况下循以上道路运转，但特殊情况下，可以不遵循这个道路。比如内经说人饮食热的水谷，有时会立刻出汗，位置在面部、背部或者半身，这是因为卫气彪悍，在腠理开关不正常的情况下，遇到出口就会走出。
 
-> 黄帝曰：人有热饮食下胃，其气未定，汗则出，或出于面，或出于背，或出于身半，其不循卫气之道而出，何也？歧伯曰：此外伤于风，内开腠理，毛蒸理泄，卫气走之，固不得循其道。”此气慓悍滑疾，见开而出，故不得从其道，故命曰漏泄。
+> 黄帝曰：人有热饮食下胃，其气未定，汗则出，或出于面，或出于背，或出于身半，其不循卫气之道而出，何也？
+> 歧伯曰：此外伤于风，内开腠理，毛蒸理泄，卫气走之，固不得循其道。此气慓悍滑疾，见开而出，故不得从其道，故命曰漏泄。
 >
-> 《灵枢-营卫生会》
+> ——《灵枢•营卫生会第十八》
 
-##### 功能：
+##### 功能
 
 教材总结卫气功能主要有三个方面：
 
@@ -118,7 +119,7 @@
 
 > 卫气的功能有三个方面：一是护卫肌表，防御外邪。二是温煦脏腑，润泽皮毛。三是司汗孔开合。
 >
-> 故《灵枢·本藏》说：“卫气者，所以温分肉，充皮肤，肥腠理，司开合者也”、“卫气和，则分肉解利，皮肤润柔，腠理致密矣”。
+> 故《灵枢•本藏》说：“卫气者，所以温分肉，充皮肤，肥腠理，司开合者也”、“卫气和，则分肉解利，皮肤润柔，腠理致密矣”。
 >
 > 《中医药学概论-藏象-气》
 
@@ -154,7 +155,7 @@
 
 > 其大气之搏而不行者，积于胸中，命曰气海，出于肺，循咽喉，故呼则出，吸则入。天地之精气，其大数常出三入一，故**谷不入，半日则气衰**，一日则气少矣。
 >
-> 《灵枢-五味》
+> ——《灵枢•五味》
 
 宗气不足，则影响呼吸功能和血液的运行功能，可引起血脉凝滞，进而在肢体温度、运动、心脏跳动等方面出现异常。
 
@@ -178,21 +179,21 @@
 
 五脏六腑各有其对应的气态物质，详见下面的地气部分。
 
-#### 1.5、气的调节：
+#### 1.5、气的调节
 
 全身气的升降出入活动是在肝的调节下进行，肝主疏泄即为此意。若肝的疏泄功能失常，则可能出现气的上逆，产生头目胀痛，面红目赤，心烦易怒的现象；或者气的运转产生淤滞，进而影响血和津液的运行，产生气滞血瘀痰饮的现象，妇女可以产生经行不畅、痛经等现象。肝的疏泄功能也管理脾胃的气机升降，若出现异常，对于脾可能出现腹胀、肠鸣、泄泻等脾气不升的症状，对于胃可能出现胃脘作痛，嗳气不舒，恶心呕吐的胃气不降的症状。
 
 > 一是调畅气机。气机，即气的升降出入运动，它是对脏腑功能活动形式的基本概括。由于肝具有主动、主升的功能特点，这对气机的疏通、畅达、升发，是一个重要的因素。肝的疏泄功能正常与否，直接影响着气机的调畅。如果肝的疏泄功能正常，则气机通畅，气血和调，经脉通利，各个脏腑的功能活动就正常。如果肝的疏泄功能异常，或由于肝的疏泄功能减退，而形成气机不畅、肝气郁结的病理变化，出现胸胁胀痛的病症。或由于肝的升发太过而形成肝气上逆，或肝阳上亢的病理变化，而出现头目胀痛，面红目赤，心烦易怒等病理现象。由于气的升降出入运动，直接影响到血与津液的输布与运行，故肝的疏泄功能异常，常会导致血与津液的病变。如肝气郁结，可形成血瘀、癓瘕，在妇女可导致经行不畅、痛经等症。同样，肝郁气滞，亦可产生痰、水等病理产物，出现痰核、臌胀等症状。
 >
-> 《中医药学概论--肝、胆》
+> 《中医药学概论-肝、胆》
 
-#### 1.6、小结：
+#### 1.6、小结
 
 经络为气态物质的运行通道，存在于各种组织器官的间隙之中。如内经说卫气“**循皮肤之中，分肉之间，熏于肓膜，散于胸腹**”，张景岳说“凡腔腹肉理之间，上下**空隙**之处，皆谓之肓”。
 
 > 岐伯答曰：气之不得无行也，如水之流，如日月之行不休，故阴脉荣其脏，阳脉荣其腑，如环之无端，莫知其纪，终而复始，其流溢之气，内溉脏腑，外濡腠理。
 >
-> 《灵枢-天年》
+> ——《灵枢•天年》
 
 特殊情况下，气态物质可以弥漫渗透的方式穿过形体组织。在《中医儿科学》的小儿哮喘病中，谈到此病的病根为肺中伏痰，但过食冷、酸、咸的食物会诱发，就是因为小儿器官娇嫩，冷酸等气态物质浸入肺腑而发病。
 
@@ -216,7 +217,7 @@
 
 `市面上流传的经络图往往只有十二正经和奇经八脉。这让初学者误认为没有这些线路的地方就没有经络。其实经络图中标明的只是经络的主干道，主干道上还会生出很多细小的络脉。这些络脉太复杂，所有没有在图上标出。大家仔细学习《概论-经络》、《针灸学-经络》就知道，除了这些主干道，经络还包括十五络脉、十二经别、十二经筋、十二皮部等等，是完全覆盖全身上下、内外的。`
 
-## 2、人体地气
+### 2、人体地气
 
 #### 2.1、概述
 
@@ -340,7 +341,7 @@
 | 金   | 收   | 毛（浮） |
 | 水   | 藏   | 石（沉） |
 
-## 3、总结
+### 3、总结
 
 总的来说，人体的元气、气态物质、津血、形体 外应自然界的阳光、空气、水、土。在元气作用下，人体的固、液、气三类物质的形态相互转换；能量状态在时间维度上波动，在空间维度上各有差异，这种波动和差异又都在各自的平衡范围内，从而形成了人体的适宜内环境。这是根据“天人合一”的道理，通过观察大自然推导出的人体规律。
 
@@ -348,13 +349,13 @@
 >
 > 黄元御《素灵微蕴》
 
-## 4、探讨：
+### 4、探讨
 
 人体中气的种类与运行规律，历来也是中医的理论难点。目前科技的发展还不能精确分析人体内的能量和气态物质的运转情况，所以只能根据《内经》、《伤寒》等经典的叙述以及临床实践进行推论。又因为古人用词简略，有时会产生歧义，所以一些理论细节不能保证完全正确，但大致方向问题不大。以后随着人类认知能力的增加，对人体的认识会更加深入，那时对中医经典的诠释可能会更加准确。
 
 
 
-## 题目
+### 题目
 
 1. 如果从天气、地气的角度划分阴阳，人体的血、津液、形属于-----气，为阴；人体的气态物质包括宗气、营卫之气属于天气，为阳。
 2. 营气源于脾胃，从----焦注入手太阴肺脉，然后按照十二经顺序依次流转，一日夜行多少周？----（填大写数字）。营气与津液混合就成为------
@@ -362,4 +363,3 @@
 4. 宗气、卫气、营气几种气态物质中，能保护肌表，抵抗寒冷的是----气；能帮助肺呼吸，推动血运行的是----气；作为饮食中的精微部分，能够营养全身的是-----气；能管理毛孔开合的是-----气。
 5. 人体地气五行中，肝、胆为木，心、小肠为-----，脾、胃为------，肺、大肠为------，肾、膀胱为-----。木气分阴阳的话，肝木为阴木，胆木为-----木。
 6. 在五脏与五华的对应关系中，爪（指甲）与---脏对应，面与---脏对应，唇与---脏对应，毛（表皮毫毛）与-----脏对应，发与----脏对应，可以通过观察五华初步判断五脏的健康状态。
-
