--- a/ok/ya/ya02-0.9.0.0.0.md
+++ b/ok/ya/ya02-0.9.0.0.0.md
@@ -1,6 +1,6 @@
 ## 2.9许叔微治太阳中风兼喘案
 
-戊申正月，有一武弁在仪真为张遇所虏日夕置于舟板下，不胜伏，后数日得脱，因饱食，解在扪虱以自快，次日遂作伤寒。医者以因饱食伤而下之，一医以解衣中邪而汗之。杂治数日，渐觉昏困，上喘息高。医者怆惶罔知所指。予诊之曰：太阳病下之，表未解，微喘者，[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)加[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)杏子汤。此仲景法也。医者争曰；某平生不曾用[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)，况此药热，安可愈喘。予曰：非汝所知也。一投而喘定，再投而濈濈①汗出。至晚，身凉而脉已和矣。
+戊申正月，有一武弁在仪真为张遇所虏，日夕置于舟板下，不胜伏，后数日得脱，因饱食，解在扪虱以自快，次日遂作伤寒。医者以因饱食伤而下之，一医以解衣中邪而汗之。杂治数日，渐觉昏困，上喘息高。医者怆惶罔知所指。予诊之曰：太阳病下之，表未解，微喘者，[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)加[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)杏子汤。此仲景法也。医者争曰；某平生不曾用[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)，况此药热，安可愈喘。予曰：非汝所知也。一投而喘定，再投而濈濈①汗出。至晚，身凉而脉已和矣。
 
 （《伤寒九十论》）
 
