--- a/ok/ya/ya02-0.15.0.0.0.md
+++ b/ok/ya/ya02-0.15.0.0.0.md
@@ -12,4 +12,4 @@
 
 ③自如：自若，象原来的样子。
 
-〔评按〕取得较好疗效的关键，不仅在于认病清，辨证准；更在于选药精，制剂良。汤者荡也，荡涤病邪，取效最速；散者散也，便于服用，节省药物。本案[小柴胡汤](https://www.gmzyjc.com/read/fjx/fjx02-0.1.0.0.0.md)用散而无效，用汤则遂安。可见剂型的变更，甘疗效的影响甚大。临床应把握不同剂型的特点，才能适应繁纷复杂的病变。
+〔评按〕取得较好疗效的关键，不仅在于认病清，辨证准；更在于选药精，制剂良。汤者荡也，荡涤病邪，取效最速；散者散也，便于服用，节省药物。本案[小柴胡汤](https://www.gmzyjc.com/read/fjx/fjx02-0.1.0.0.0.md)用散而无效，用汤则遂安。可见剂型的变更，对疗效的影响甚大。临床应把握不同剂型的特点，才能适应繁纷复杂的病变。
