update ok/hk/hk1gl01-0.1.0.0.0.md. 标题字体缩小 胀感及烧灼感 少一个及字 脾胄有热 胃

--- a/ok/hk/hk1gl01-0.1.0.0.0.md
+++ b/ok/hk/hk1gl01-0.1.0.0.0.md
@@ -1,4 +1,5 @@
-## 风热喉痹之一（急性单纯性咽炎）
+
+## 风热喉痹<small>之一（急性单纯性咽炎）</small>
 
 中医认识此病很早，但名称复杂，后世引申为多种喉病的总名。在喉风或喉痹病名中更纵横跨及咽与喉两者的所有疾病。
 
@@ -20,7 +21,7 @@
 
 初起全身不适、凛寒、头痛、口渴、食欲锐减。甚至恶心呕吐、便闭、溺赤。体温常升至38度左右，甚至高达40度者。如无并发症，约3-4天即可衰退，6-7天至正常。
 
-局部感觉，干燥毛涩，或有胀感烧灼感，也有痒感而因痒致咳。之后以疼痛为主。在空咽时疼痛更明显，甚至可痛及耳中者，有时也可幅射至颈部。转仄失利，所以就有“锁喉”“叉喉”等名称。如粘液潴积于喉咽处，则更可增窒息及咳嗽。如其波及喉部，则声音嘶哑。喉部也有干燥、毛涩、灼热等种种不适感。或有咳嗽，咳时常常感到喉下的气管也有括痛。始为干咳，呈痉挛性，常在夜间加剧。随着分泌物的增多而粘液性分泌物可以咯出，咯出后片刻之间稍感舒服。局部所见，咽部充血水肿，其色红艳。因外侧壁咽腭弓的粘膜肿胀充血尤甚而突出如皱襞。软腭及扁桃体的表面发现黄白色点状渗出物，所以中医称之谓帘珠喉、烂喉风。
+局部感觉，干燥毛涩，或有胀感及烧灼感，也有痒感而因痒致咳。之后以疼痛为主。在空咽时疼痛更明显，甚至可痛及耳中者，有时也可幅射至颈部。转仄失利，所以就有“锁喉”“叉喉”等名称。如粘液潴积于喉咽处，则更可增窒息及咳嗽。如其波及喉部，则声音嘶哑。喉部也有干燥、毛涩、灼热等种种不适感。或有咳嗽，咳时常常感到喉下的气管也有括痛。始为干咳，呈痉挛性，常在夜间加剧。随着分泌物的增多而粘液性分泌物可以咯出，咯出后片刻之间稍感舒服。局部所见，咽部充血水肿，其色红艳。因外侧壁咽腭弓的粘膜肿胀充血尤甚而突出如皱襞。软腭及扁桃体的表面发现黄白色点状渗出物，所以中医称之谓帘珠喉、烂喉风。
 
 此外，鼻腔、鼻咽部及喉部也可出现炎性病变。检查颈部，可发现肿大的淋巴结，且有压痛。
 
@@ -100,7 +101,7 @@
 
 3.风燥：《三因方》：“诸脏热则肿，寒则缩，皆使喉闭，风燥亦然”。
 
-4.脾胃热：《太平圣惠方》：“脾胄有热，则热气上冲，致咽喉肿痛”。
+4.脾胃热：《太平圣惠方》：“脾胃有热，则热气上冲，致咽喉肿痛”。
 
 5.痰与火：《喉科紫珍集》：“风热感于膈间，或过食炙煿厚味，以致火动痰生”。
 
