--- a/ok/wk/wk07-0.1.0.0.0.md
+++ b/ok/wk/wk07-0.1.0.0.0.md
@@ -4,13 +4,13 @@
 
 中医将乳分为乳头、乳晕、乳房、乳络四部分。根据经络的循行分布，乳头属足厥阴肝经，乳房属足阳明胃经。所以肝气不疏，胃经热盛，易生乳病。治疗也多从肝胃入手。
 
-中医书籍很早就有关于乳痈的记载。约在公元317年车右葛洪《肘后备急方》中有“妳发”、“乳痈”、“妬肿”、“乳肿”等病名，用灸、敷、内服药等法治疗。特别值得提出的是用鹿角烧灰或磨汁外敷治疗乳痈，确有疗效。《刘涓子鬼遗方》对乳房病的记载有“乳痈”、“发乳”、“妬乳”、“乳结肿”以及“妇人发房”等五种，并开始用王不留行、黄芩、淡竹叶、丹参、芍药、当归、白芷等药物组成的内服、外敷方剂治疗，及“以针要脓”法排脓。
+中医书籍很早就有关于乳痈的记载。约在公元317年左右葛洪《肘后备急方》中有“妳发”、“乳痈”、“妬肿”、“乳肿”等病名，用灸、敷、内服药等法治疗。特别值得提出的是用鹿角烧灰或磨汁外敷治疗乳痈，确有疗效。《刘涓子鬼遗方》对乳房病的记载有“乳痈”、“发乳”、“妬乳”、“乳结肿”以及“妇人发房”等五种，并开始用王不留行、黄芩、淡竹叶、丹参、芍药、当归、白芷等药物组成的内服、外敷方剂治疗，及“以针要脓”法排脓。
 
 到隋代，在我国第一部有关病源、病理的巨著《诸病源候论》中，便相当清楚地分析了乳痈的病因病机，主要有“因乳汁蓄积”；“热盛乘于血、血化成脓”；“肤腠理虚，有风湿之气，乘虚客之”等等。
 
 宋代，《卫济宝书》更认识到年龄与乳病的关系，“乳痈……四十以下，治之多癒，四十以上，十癒四五,……腐漏三年而死。”这实际上是描述了乳痈或乳岩的预后。
 
-元初，朱丹溪对乳痈的认识已相当明确，治疗大法亦已初具规范。他对饮食、情志等多方面导致乳病的因素均已有所认识，声拟出了“疏厥阴之滞，清阳明之热”的治疗大法。
+元初，朱丹溪对乳痈的认识已相当明确，治疗大法亦已初具规范。他对饮食、情志等多方面导致乳病的因素均已有所认识，并拟出了“疏厥阴之滞，清阳明之热”的治疗大法。
 
 元代齐德之《外科精义》所载“吹妳方”，现在临床应用仍有良效。他说蒲公英主乳痈，煮汁饮之自消，实为经验之谈。
 
@@ -22,7 +22,7 @@
 
 乳房为“宗经之所”，“女子致命之地”。
 
-从经脉所属来看，足阳明胃经贯乳中；足厥阴肝经，上贯膈，布协妨。因此，乳房主要与肝、胃二经关系密切。但不只此，还有足少阳胆经，下胸中，循胁里；足少阴肾经，从肾上贯肝膈入肺中；任脉循腹里，上关元，至胸中；冲脉夹脐上行，至胸中而散。脾经大络（叫做“大包”）出渊液下三寸，分布在胸胁；胃经大络（叫做“虚里”）出于左乳下。可见这些经络与乳房也均有直接的联系。所以古人称乳房为“宗经之所”。
+从经脉所属来看，足阳明胃经贯乳中；足厥阴肝经，上贯膈，布协肋。因此，乳房主要与肝、胃二经关系密切。但不只此，还有足少阳胆经，下胸中，循胁里；足少阴肾经，从肾上贯肝膈入肺中；任脉循腹里，上关元，至胸中；冲脉夹脐上行，至胸中而散。脾经大络（叫做“大包”）出渊液下三寸，分布在胸胁；胃经大络（叫做“虚里”）出于左乳下。可见这些经络与乳房也均有直接的联系。所以古人称乳房为“宗经之所”。
 
 从脏腑气血的关系来看，乳汁化生于气血，而气血来源于脾胃之谷气，所以乳味醇甘。乳汁的疏泄通利，为肝胆木气所主司。乳汁的稠厚与稀薄，与冲任二脉的关系密切。因为冲为血海，任主胞胎，气血上行则化而为乳，下行则成经信。所以妇人授乳期间，便无月经按月而至。反之，乳房病变也会影响冲任之盛衰。所以，古人说乳房为”女子致命之地”。
 
