--- a/ok/fjx/fjx14-0.1.0.0.0.md
+++ b/ok/fjx/fjx14-0.1.0.0.0.md
@@ -14,9 +14,9 @@
 
 〔临证应用〕本方的临床运用，主要有两个方面，即蛔厥与久痢。
 
-蛔厥，属厥阴证。以手足厥逆、腹痛呕吐、时作时止为主要见证。病作则诸症见，病止则诸症缓，但腹痛处仍有畏按压的现象，舌脉之表现亦不执一，或见苔白滑、脉弦缓的寒湿象,或见苔黄腻，舌质红，脉弦滑而数的湿热象，大便或常或秘，故运用时亦须灵活。前者可加香桂枝、附子用量以温阳化湿，后者则可去桂枝、附子，而酌加茵陈。若见身、目黄染，便秘溲赤，热与湿相结者，可加川军、枳实、茵陈以通腑热，退黄疸。若病势初起，体气素强，则补益之品反增留邪之虞，可于本方中去人参、当归。
+蛔厥，属厥阴证。以手足厥逆、腹痛呕吐、时作时止为主要见证。病作则诸症见，病止则诸症缓，但腹痛处仍有畏按压的现象，舌脉之表现亦不执一，或见苔白滑、脉弦缓的寒湿象，或见苔黄腻，舌质红，脉弦滑而数的湿热象，大便或常或秘，故运用时亦须灵活。前者可加香桂枝、附子用量以温阳化湿，后者则可去桂枝、附子，而酌加茵陈。若见身、目黄染，便秘溲赤，热与湿相结者，可加川军、枳实、茵陈以通腑热，退黄疸。若病势初起，体气素强，则补益之品反增留邪之虞，可于本方中去人参、当归。
 
-又：本方之力，重在温脏安蛔，而驱虫之力不大，若不继用驱蛔，则症虽暂缓，难免复发，故为根治计，应在运用本方，症情稳定后数日，及时运用驱蛔之方，如苦楝根皮，槟榔、使君子、鹤虱、芜荑（即化虫丸方）给服，或于本方中加入驱虫之品，以求虫去而病得到根治。
+又：本方之力，重在温脏安蛔，而驱虫之力不大，若不继用驱蛔，则症虽暂缓，难免复发，故为根治计，应在运用本方，症情稳定后数日，及时运用驱蛔之方，如苦楝根皮、槟榔、使君子、鹤虱、芜荑（即化虫丸方）给服，或于本方中加入驱虫之品，以求虫去而病得到根治。
 
 久痢：痢本多实，但若病痢日久，病邪未净，正气已虚，证见痢疾时作时止，常因劳伤之气、饮食不当、情志失调等而引发，腹痛喜温，痢下脓血，四肢厥逆，渴饮烦躁，属寒热错杂，上热下寒之证，可用本方丸服或汤剂服。此外尚有：
 
