--- a/ok/fjx/fjx14-0.2.0.0.0.md
+++ b/ok/fjx/fjx14-0.2.0.0.0.md
@@ -8,7 +8,7 @@
 
 〔临证应用〕治小儿疳病者，多因缺乳，食吃太早所致或因久患脏腑胃虚虫动，日渐羸瘦，腹大发竖，不能行步，面黄口臭发热，面无精神。此药杀虫进食。
 
-本方具杀虫消积、健脾清热功效。主治小儿虫积腹疼，消化不良，面黄体度，肚腹胀满，发热口臭等症。
+本方具杀虫消积、健脾清热功效。主治小儿虫积腹疼，消化不良，面黄体瘦，肚腹胀满，发热口臭等症。
 
 复习思考题
 
