--- a/ok/bc/bc17.md
+++ b/ok/bc/bc17.md
@@ -20,11 +20,11 @@
 
 6.熟悉补血药的适用证。
 
-7.掌握补血药中常用药的功效、临证应用，并比较其异同.
+7.掌握补血药中常用药的功效、临证应用，并比较其异同。
 
 8.熟悉补阴药的适用证。
 
-9.常握补阴药中常用药的功效、临证应用，并比较其异同。
+9.掌握补阴药中常用药的功效、临证应用，并比较其异同。
 
 10.熟悉补气、升阳、固表、托疮、柔肝、补血、补阴、养阴、滋阴、壮阳、补肾等概念。
 
