update ok/hk/hk1gl01-0.3.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.3.0.0.0.md
+++ b/ok/hk/hk1gl01-0.3.0.0.0.md
@@ -1,4 +1,4 @@
-## 风热喉痹之三（粒细胞缺乏性咽峡炎）
+## 风热喉痹<small>之三（粒细胞缺乏性咽峡炎）</small>
 
 过去中医对此病的认识，相当不足。逮解放之后改封闭型为开放型，逐渐与西医学说沟通，乃认识此病并摸索出一套有效措施。这是一个严重的病种，幸而在临床上并不多见。常出现急性病程，有发热、衰竭、咽喉部溃疡性病变，甚至坏死。它是一种恶性白细胞减少症，好发于女性，一般男女对比为1:3，更以年龄在40〜60岁之间的尤多，儿童很少发病，一般在25岁以后逐渐增多。
 
