update ok/wk/wk12.md. 5、原文“红斑狠疮”，修改为“红斑狼疮” 6、原文“红斑狠疮”，修改为“红斑狼疮”。

--- a/ok/wk/wk12.md
+++ b/ok/wk/wk12.md
@@ -14,8 +14,8 @@
 
 4.熟悉急性湿疮、慢性湿疮、婴儿湿疮、瘾疹、风热疮、猫眼疮、瓜藤缠、白疕、蛇串疮、风瘙痒病的病因病机。
 
-5.熟悉药物性皮炎、接触性皮炎、日晒疮、脓窠痊、疥疮、白癜风、油风、红斑狠疮、蛇皮癣、牛皮癣病的辨证要领及常见证治。
+5.熟悉药物性皮炎、接触性皮炎、日晒疮、脓窠痊、疥疮、白癜风、油风、红斑狼疮、蛇皮癣、牛皮癣病的辨证要领及常见证治。
 
-6.了解药物性皮炎、接触性皮炎、日晒疮、脓疱疮、疥疮、曰瘢风、油风、红斑狠疮、蛇皮癣、牛皮癣病的病因病机。
+6.了解药物性皮炎、接触性皮炎、日晒疮、脓疱疮、疥疮、曰瘢风、油风、红斑狼疮、蛇皮癣、牛皮癣病的病因病机。
 
 7.了解粉刺、酒皶鼻、白屑风、热疮、头癣、手癣、足癣、体癣、股癣、扁平疣、传染性软疣、寻常疣的辨证要领及常见证治。
