--- a/ok/fjx/fjx15-0.1.0.0.0.md
+++ b/ok/fjx/fjx15-0.1.0.0.0.md
@@ -34,7 +34,7 @@
 
 除赤小豆，加郁金、韭汁，鹅翎探吐，亦名三圣散，开郁通阳，可治痰闭、风癇及痰厥头痛等。
 
-〔文献摘录〕邪在表宜汗，在上焦宜吐，在中下宜下，此汗吐下三法也。今人唯知汗下，而吐法绝置不用，使遇当吐之证，而不行涌越，则邪气壅结而不散矣。经曰：其高者因而越之,又曰，在与者涌之。丹溪曰：吐中就有发散之义。张子和曰：诸汗法，古方多有之，惟以吐发汗者，世罕知之。故予尝曰，吐法兼汗，其以此大。（《成方切用》）
+〔文献摘录〕邪在表宜汗，在上焦宜吐，在中下宜下，此汗吐下三法也。今人唯知汗下，而吐法绝置不用，使遇当吐之证，而不行涌越，则邪气壅结而不散矣。经曰：其高者因而越之，又曰，在与者涌之。丹溪曰：吐中就有发散之义。张子和曰：诸汗法，古方多有之，惟以吐发汗者，世罕知之。故予尝曰，吐法兼汗，其以此大。（《成方切用》）
 
 复习思考题
 
