--- a/ok/fjx/fjx19-0.3.0.0.0.md
+++ b/ok/fjx/fjx19-0.3.0.0.0.md
@@ -1,12 +1,12 @@
 ## 苏合香丸《太平惠民和剂局方》
 
-〔组成〕白术 青木香 乌犀角 香附子 炒去毛 朱砂研水飞 诃黎勒煨去皮 白檀香 安息香别为末用无灰酒一升熬膏 沉香 麝香研 丁香荜拔各二两 龙脑研 苏合香油入安息膏内各一两 熏陆香别研一两 右为细末，入研药匀，用安息香膏炼白蜜和剂。
+〔组成〕白术 青木香 乌犀角 香附子 炒去毛 朱砂研水飞 诃黎勒煨去皮 白檀香 安息香别为末用无灰酒一升熬膏 沉香 麝香研 丁香 荜拔各二两 龙脑研 苏合香油入安息膏内各一两 熏陆香别研一两 右为细末，入研药匀，用安息香膏炼白蜜和剂。
 
 现代用法：以白术 木香 犀角屑 香附炒 朱砂研水飞 诃子煨 白檀香 安息香熬膏 沉香麝香研 丁香 荜拔各60克 冰片研 苏合香油乳香别研各30克 炼蜜为丸（每丸重3克）每服一丸，温开水化服，小儿用量酌减。昏不知人、牙关紧闭不能口服者，可用鼻饲。
 
-〔讲解〕本方具有温通开窍、行气化浊的作用，为温开之代表方剂。主治寒湿痰浊蒙蔽清窍，突然昏倒，不醒人事、牙关紧闭之证。方中集中苏合香、沉香，麝香、檀香、丁香、乳香、安息香、木香、香附、冰片共十种香药为方之主体，取其芳香开窍、行气解郁、散寒化浊之功。其中苏合香、安息香善透窍逐秽、开闭醒神。冰片、麝香，辟秽开窍，通经达络，善通全身清窍。香附、丁香、木香、沉香、檀香，乳香诸香辛散温通，行气降逆、宣窍开郁，气降则痰降，气顺则痰消。乳香行气兼活血，使气血运行通畅，则疼痛可止，荜拔配诸香以增强温中散寒、止痛、行气开郁之功。犀角清心解毒，其性虽凉，但其气清香，清灵透发，寒而不遏。朱砂镇心安神，白术健脾和中以化浊。诃子温涩敛气，与诸香配伍，以防诸香辛香走窜耗散太过。诸药合用共成芳香化浊、温中行气，开窍醒神的重要方剂，
+〔讲解〕本方具有温通开窍、行气化浊的作用，为温开之代表方剂。主治寒湿痰浊蒙蔽清窍，突然昏倒，不醒人事、牙关紧闭之证。方中集中苏合香、沉香、麝香、檀香、丁香、乳香、安息香、木香、香附、冰片共十种香药为方之主体，取其芳香开窍、行气解郁、散寒化浊之功。其中苏合香、安息香善透窍逐秽、开闭醒神。冰片、麝香，辟秽开窍，通经达络，善通全身清窍。香附、丁香、木香、沉香、檀香、乳香诸香辛散温通，行气降逆、宣窍开郁，气降则痰降，气顺则痰消。乳香行气兼活血，使气血运行通畅，则疼痛可止，荜拔配诸香以增强温中散寒、止痛、行气开郁之功。犀角清心解毒，其性虽凉，但其气清香，清灵透发，寒而不遏。朱砂镇心安神，白术健脾和中以化浊。诃子温涩敛气，与诸香配伍，以防诸香辛香走窜耗散太过。诸药合用共成芳香化浊、温中行气，开窍醒神的重要方剂。
 
-〔临床应用〕本方为温开之代表方剂，具有温通开窍、行气化浊的功效。凡中风、中恶、气厥、痰厥等而见卒然昏倒、不省人事、牙关紧闭、属寒湿痰浊上蒙清窍者均可使用。
+〔临床应用〕本方为温开之代表方剂，具有温通开窍、行气化浊的功效。凡中风、中恶、气厥、痰厥等而见卒然昏倒、不省人事、牙关紧闭，属寒湿痰浊上蒙清窍者均可使用。
 
 感触秽恶之气所致胸腹满痛而冷，痰壅气闭、或突然昏迷，亦可使用。
 
