update ok/wk/wk12-0.1.0.0.0.md. 继发性皮损第三项痂后面的分号修改成了冒号。

--- a/ok/wk/wk12-0.1.0.0.0.md
+++ b/ok/wk/wk12-0.1.0.0.0.md
@@ -56,7 +56,7 @@
 
 ②糜烂：为局限性的表皮组织缺损。可由水疱、脓疱破裂，丘疹破损引起，愈后不留疤痕。多由湿热所致。
 
-③痂；皮肤渗液（滋水）、脓液、血液干燥以后而结成。脓痂为热毒未清，血痂为血热而致，滋痂为湿热未清。
+③痂：皮肤渗液（滋水）、脓液、血液干燥以后而结成。脓痂为热毒未清，血痂为血热而致，滋痂为湿热未清。
 
 ④抓痕：由于搔抓引起的点状、线状的损害，可发生于正常皮肤和皮损周围，其痒多由风盛或血虚风燥所致。
 
