--- a/ok/wk/wk07-0.1.0.0.0.md
+++ b/ok/wk/wk07-0.1.0.0.0.md
@@ -54,7 +54,7 @@
 
 4.肿瘤与胸壁是否已有固定：应先在水平面上，再在垂直方向，检查肿瘤的推动性，然后嘱病人以手用力叉腰，作同样的检查比较后始能确定。
 
-5.局部淋巴结的检查，检查腋窝淋巴结时，检查者自前面用左手伸入病人右侧腋窝，用右手伸入其左侧腋窝；然后嘱病人内收上臂，下臂毫不用力地放在检查者的下臂上，这样，腋窝完全松弛，可清楚地扪摸到腋窝中央以及在腋窝前壁的肿大的淋巴结。检查患者腋窝后壁的淋巴结，最好是检查者站在病人背后扪摸，锁骨上淋巴结时检查亦宜自背后进行。检查时应注意淋巴结的数目、大小、硬度及其活动性。
+5.局部淋巴结的检查，检查腋窝淋巴结时，检查者自前面用左手伸入病人右侧腋窝，用右手伸入其左侧腋窝；然后嘱病人内收上臂，下臂毫不用力地放在检查者的下臂上，这样，腋窝完全松弛，可清楚地扪摸到腋窝中央以及在腋窝前壁的肿大的淋巴结。检查患者腋窝后壁的淋巴结，最好是检查者站在病人背后扪摸，锁骨上淋巴结的检查亦宜自背后进行。检查时应注意淋巴结的数目、大小、硬度及其活动性。
 
 应该教会病人自己作扪诊检查。嘱病人平躺，将被扪诊乳房侧的手臂上举放在头后，然后用另侧平坦的手指掌面作扪诊，一个直径小于一厘米的乳房肿块，常可由病人自己扪到。如发现或疑似肿块，应立即到当地医疗单位就诊，以进一步确定肿物性质。
 
