--- a/ok/bc/bc18-0.0.12.0.0.md
+++ b/ok/bc/bc18-0.0.12.0.0.md
@@ -2,7 +2,7 @@
 
 **〔原文〕甘涩。固肾益精，补脾去湿。治泄泻带浊，小便不禁，梦遗滑精**，<small> 同金櫻膏为丸，名水陆二仙丹。</small>**腰膝痠痛**，<small>吴子野曰：人之食芡，必枚啮而细嚼之，使华液流通, 转相灌溉，其功胜于乳石也。经验后方：煮熟研膏；合粳米煮粥食，益精气。</small>**蒸熟捣粉用，涩精药或连壳用**。<small>李惟熙曰：菱寒而茨暖, 菱花背日，芡花向日。</small>	
 
-【讲解】 **芡实有补脾祛湿、益肾固精之效**。为睡莲科一年生草本植物芡的成熟种仁。别名鸡头实。压碎去硬壳，取仁晒干，或再去掉红棕色种皮。生用或炒用，捣碎入药。
+【讲解】 **芡实有补脾祛湿、益肾固精之效**。为睡莲科一年生草本植物芡的成熟种仁。别名鸡头实。压碎去硬壳，取仁晒干，或再去掉红棕色内种皮。生用或炒用，捣碎入药。
 
 本品味甘涩，性平。入脾、肾经。脾主运化，脾虚则运化失职，水湿下注，而为泄泻、带下。本品既能健脾以祛湿，又能收敛 以固涩，对于脾虚有湿的泄泻、带下之证，有标本同治之义。肾主封藏，肾虚则封藏之职失司，下元不固，而见遗精、早泄、小便频数等证。芡实除补脾外，又能益肾，具有固精缩尿之义，以治肾虚精关不固之梦遗滑精，膀胱失约之小便失禁等证。
 
