--- a/ok/gk/gk05-0.2.5.0.0.md
+++ b/ok/gk/gk05-0.2.5.0.0.md
@@ -26,7 +26,7 @@
 
 （4）矫正前后移位：术者两手仍为抱髁状，此时两手四指移至骨折近端，环抱于肘前，两拇指移至远端到尺骨鹰嘴处，两手虎口处对向压挤两髁，环抱两手四指将骨折近段拉向背，两拇指将骨折远段推向前，令牵引前臂之助手徐徐牵引将肘屈曲到90°，使四方的力量联合一致，同时合力，在保持两髁复位的情况下，矫正前移位。
 
-一般的骨折经上述手法后，都能达到基本复位。但要注意，常因骨折远端的两髁近端受两侧关节囊韧带的牵拉，或术者在整复时两虎口未能紧压挤髁部，时有向外、内旋转分离，使滑车关节面不平。因此，术者一手需继续抱髁，另一手在課上向中心推挤，使骨折扣紧。
+一般的骨折经上述手法后，都能达到基本复位。但要注意，常因骨折远端的两髁近端受两侧关节囊韧带的牵拉，或术者在整复时两虎口未能紧压挤髁部，时有向外、内旋转分离，使滑车关节面不平。因此，术者一手需继续抱髁，另一手在髁上向中心推挤，使骨折扣紧。
 
 骨折整复位，安放纸压垫及肱骨髁上夹板超关节固定绷扎，做术后X线复查，如关节面平整，仅有骨折远近段稍许重叠者，可用尺骨上端骨牵引来复位，如单一侧髁骨折片仍有分离时，可用拇指挤压或安置纸压垫处理，不必再行手法整复，如两髁明显移位，须再行复位，达到满意对位为止。
 
@@ -34,6 +34,6 @@
 
 <img src="img\5-23.jpg" style="zoom:70%;" />
 
-如骨折移位很大，手法复位或夹板固定骨折不稳定，在采用人骨上端牵引时，一助手固定骨折部，另一助手握住前臂，取尺骨鹰嘴下二横指穿针：常规消毒铺巾后，用骨钻钻入细克氏针，其力线与上臂纵轴一致，患臂置于活动的牵引架上，牵引重量1.5〜2公斤，患肢与躯干呈70°〜80°外展前臂申立位，肘关节屈曲90°〜120°范围内。
+如骨折移位很大，手法复位或夹板固定骨折不稳定，在采用人骨上端牵引时，一助手固定骨折部，另一助手握住前臂，取尺骨鹰嘴下二横指穿针：常规消毒铺巾后，用骨钻钻入细克氏针，其力线与上臂纵轴一致，患臂置于活动的牵引架上，牵引重量1.5〜2公斤，患肢与躯干呈70°〜80°外展前臂中立位，肘关节屈曲90°〜120°范围内。
 
 3.功能锻炼：在麻醉消退后，即可使患者做握拳锻炼。初期，一般只有10°〜20°的主动伸屈肘活动。要求患者在无痛下，自动加重活动范围，一般2〜3周后，其活动范围可40°〜50°左右，卧床骨牵引为4周以后，如经X线检查，骨折对位好，可解除牵引，再继续夹板外固定，待临床检查骨折部无痛，肘关节用力作伸屈活动，骨折临床愈合，即可解除外固定，外用四肢损伤洗方，直至肘关节恢复正常功能。
