update ok/bc/bc18-0.0.13.0.0.md. 错字

--- a/ok/bc/bc18-0.0.13.0.0.md
+++ b/ok/bc/bc18-0.0.13.0.0.md
@@ -16,4 +16,4 @@
 
 附：石莲子   系莲之老熟果实落水下沉，坚硬如石，有灰黑色果壳者。剥去壳，将肉并心碾为细末，米饮调下。专治热毒噤口痢，有祛湿热、开胃止呕之功。用量5—10克。
 
-莲子心为成熟种子的绿色胚芽。味苦性寒，主入心经。功能清心除烦，主治心火亢盛，质躁不安，神昏之证，多与玄参心、 连心麦冬、竹叶卷心等配伍，如清宫汤。本品单用研末服，也可用治吐血、遗精。近年又用治高血压病，有降血压作用。用量1.5 —3克。
+莲子心为成熟种子的绿色胚芽。味苦性寒，主入心经。功能清心除烦，主治心火亢盛，烦躁不安，神昏之证，多与玄参心、 连心麦冬、竹叶卷心等配伍，如清宫汤。本品单用研末服，也可用治吐血、遗精。近年又用治高血压病，有降血压作用。用量1.5 —3克。
