--- a/ok/bc/bc18-0.0.15.0.0.md
+++ b/ok/bc/bc18-0.0.15.0.0.md
@@ -1,6 +1,6 @@
 ### 荷 叶
 
-**〔原文〕苦平。其色青，其形仰，其中空， 其象震**。<small>震仰盂。</small>**感少阳甲胆之气，烧饭合药**，**裨助脾胃而升发阳气**，<small>洁古枳术丸，用荷叶烧饭为丸。</small>**痘疮倒黡者用此发之**。<small>僵蚕等分为末，胡荽汤下。闻人规曰：胜于人牙龙脑。</small>**能散痰血，留好血。治吐衄崩淋、损伤产瘀**，<small>熬香末服。</small>**一切血证。洗肾嚢风**。<small> 李东垣曰：雷头风证，头面疙瘩肿痛， 憎寒恶热，状如伤寒，病在三阳，不可过用寒药重剂诛罚无过，宜清震汤治之，荷叶一枚，升麻、苍术各五钱，煎服。郑奠一曰：荷叶研末，酒服三钱， 治遗精极验。</small>	
+**〔原文〕苦平。其色青，其形仰，其中空， 其象震**。<small>震仰盂。</small>**感少阳甲胆之气，烧饭合药**，**裨助脾胃而升发阳气**，<small>洁古枳术丸，用荷叶烧饭为丸。</small>**痘疮倒黡者用此发之**。<small>僵蚕等分为末，胡荽汤下。闻人规曰：胜于人牙龙脑。</small>**能散瘀血，留好血。治吐衄崩淋、损伤产瘀**，<small>熬香末服。</small>**一切血证。洗肾嚢风**。<small> 李东垣曰：雷头风证，头面疙瘩肿痛， 憎寒恶热，状如伤寒，病在三阳，不可过用寒药重剂诛罚无过，宜清震汤治之，荷叶一枚，升麻、苍术各五钱，煎服。郑奠一曰：荷叶研末，酒服三钱， 治遗精极验。</small>	
 
 【讲解】**荷叶鲜用可清解暑热，干用可升发清阳**。为睡莲植物莲的叶。鲜用，或生用。
 
@@ -8,4 +8,4 @@
 
 【临证应用】荷叶清暑散热，治暑热烦渴，常与鲜金银花、 西瓜翠衣、鲜扁豆、鲜竹叶心等煎汤内服，如清络饮。配升麻、 苍朮，治雷头风。以生荷叶配生艾叶、生柏叶、生地黄、即四生丸，用治吐血、衄血。古人谓其能升发胆中清气，以达脾气，凡脾虚气陷，而为便泻不止者，可佐入培中补剂用。如张洁古枳术丸， 以荷叶烧饭为丸，即取其能升发脾胃之气。
 
-【用量用法】鲜者15—30克，干者3 —10克，煎服。或入丸、散。
+【用量用法】鲜者15—30克，干者3—10克，煎服。或入丸、散。
