update ok/bc/bc18-0.0.16.0.0.md. 错字

--- a/ok/bc/bc18-0.0.16.0.0.md
+++ b/ok/bc/bc18-0.0.16.0.0.md
@@ -1,6 +1,6 @@
 ### 金樱子
 
-**〔原文〕酸涩。入脾、肺、肾三经，固精秘气。治梦遗泄精**，<small>和芡实为丸，名水阵丹。</small>**泄痢便数**。<small>朱丹溪曰：经络隧道，以通畅为平和，而昧者以涩性为快，熬膏食之，自作不靖， 咎将谁执？李时珍曰： 无故而食以恣欲则不可；若精气不固者、服之何害？</small> **似榴而小，黄赤有刺，取半黄**，<small>熟则纯甘。</small>**去刺核用**。<small> 熬膏亦良。《笔谈》云：熬膏则甘，全失涩味。</small>
+**〔原文〕酸涩。入脾、肺、肾三经，固精秘气。治梦遗泄精**，<small>和芡实为丸，名水陆丹。</small>**泄痢便数**。<small>朱丹溪曰：经络隧道，以通畅为平和，而昧者以涩性为快，熬膏食之，自作不靖， 咎将谁执？李时珍曰： 无故而食以恣欲则不可；若精气不固者、服之何害？</small> **似榴而小，黄赤有刺，取半黄**，<small>熟则纯甘。</small>**去刺核用**。<small> 熬膏亦良。《笔谈》云：熬膏则甘，全失涩味。</small>
 
 【讲解】**金樱子有固精、缩尿、止带之功**。为蔷薇科常绿攀缘灌木植物金樱子的成熟果实或除去瘦果的成熟花托（金樱子肉）。呈倒卵形，略似花瓶或石榴而小，外皮红黄色，上端存花萼如盘状，下端渐尖。去净核，晒干生用。
 
