--- a/ok/bc/bc18-0.0.18.0.0.md
+++ b/ok/bc/bc18-0.0.18.0.0.md
@@ -1,10 +1,10 @@
 ### 桑螵蛸
 
-**〔原文〕甘咸，入肝、肾、命门，益精气而固肾。治虚损阴痿，梦遗白浊，血崩腰痛，伤中疝瘕**。<small>肝肾不足。</small>**通五淋，缩小便**，<small>能通故能缩。肾与膀胱相表里，肾得所养，气化则能出，故能通；肾气既固，则水道安常，故又能止也。寇宗奭治便数有桑螵蛸散：桑螵蛸、茯神、远志、菖蒲、人参、当归、龙骨、鳖甲醋炙，各一两，为末，卧时人参汤下二钱，能补心安神，亦治健忘。</small>**炙饲小儿止夜尿。螳螂卵也，桑树产者为好**。<small>房长寸许，有子如蛆，芒种后齐出，故仲夏螳螂生也。如用他树者，以桑皮佐之，桑皮善行水，能引达肾经。</small>**炙黄，或醋煮汤泡煨用。畏旋覆花**。<small>螳螂能出箭镞：螳螂一个，巴豆半个，研敷伤处，微痒且忍， 极痒乃撼拔之，以黄连、贯众汤洗，右灰敷之。杨氏方：用蜣螂，镞出后， 敷生肌散。螳螂、蜣螂，皆治惊风，令人罕用。蜣螂兼治腹痛便秘、下痢脱肛、疮疽虫痔。</small>
+**〔原文〕甘咸，入肝、肾、命门，益精气而固肾。治虚损阴痿，梦遗白浊，血崩腰痛，伤中疝瘕**。<small>肝肾不足。</small>**通五淋，缩小便**，<small>能通故能缩。肾与膀胱相表里，肾得所养，气化则能出，故能通；肾气既固，则水道安常，故又能止也。寇宗奭治便数有桑螵蛸散：桑螵蛸、茯神、远志、菖蒲、人参、当归、龙骨、鳖甲醋炙，各一两，为末，卧时人参汤下二钱，能补心安神，亦治健忘。</small>**炙饲小儿止夜尿。螳螂卵也，桑树产者为好**。<small>房长寸许，有子如蛆，芒种后齐出，故仲夏螳螂生也。如用他树者，以桑皮佐之，桑皮善行水，能引达肾经。</small>**炙黄，或醋煮汤泡煨用。畏旋覆花**。<small>螳螂能出箭镞：螳螂一个，巴豆半个，研敷伤处，微痒且忍， 极痒乃撼拔之，以黄连、贯众汤洗，石灰敷之。杨氏方：用蜣螂，镞出后， 敷生肌散。螳螂、蜣螂，皆治惊风，令人罕用。蜣螂兼治腹痛便秘、下痢脱肛、疮疽虫痔。</small>
 
 【讲解】**桑螵蛸功能补肾固涩，而有缩尿固精之功**。螳螂科昆虫大刀螂和小刀螂， 或巨斧螳螂的卵鞘。深秋至翌年春均可采收，除去树皮，置沸水中浸杀其卵，晒干入药。
 
-本品甘咸涩平。入肝、肾经。味甘能补，咸以入肾，涩主收敛，为补肾助阳、缩尿固精之要用于肾虚阳衰引起的遗精、 滑精、遗尿、尿频、白带过多等证，而尤以遗尿尿频最为常用。 以其可固涩助阳 ，故凡阴虚火旺、膀胱有热而小便短数者不宜用。
+本品甘咸涩平。入肝、肾经。味甘能补，咸以入肾，涩主收敛，为补肾助阳、缩尿固精之要品。用于肾虚阳衰引起的遗精、 滑精、遗尿、尿频、白带过多等证，而尤以遗尿尿频最为常用。 以其可固涩助阳 ，故凡阴虚火旺、膀胱有热而小便短数者不宜用。
 
 【临证应用】 桑螵蛸用于肾虚遗尿、小便频数及遗精滑泄，前者常与党参、龙骨、 牡蛎等同用，如桑螵蛸散；后者多与五味子、菟丝子等同用，如菟丝子丸。与补肾助阳鹿茸、肉苁蓉、淫羊藿等同用，也可用于阳痿早泄。
 
