--- a/ok/bc/bc08.md
+++ b/ok/bc/bc08.md
@@ -7,7 +7,7 @@
 〔目的要求〕
 
 1. 了解开窍药的作用和适用证、禁忌征。
-2. 熟悉开窍药与祛寒、清热药配伍应甩的理论依据（联系中医基本理论）。
+2. 熟悉开窍药与祛寒、清热药配伍应用的理论依据（联系中医基本理论）。
 
 3. 掌握开窍药中常用药的功效、临证应用，并比较其异同。
 
@@ -15,7 +15,7 @@
 
 5. 在自学本章全部内容的基础，重点掌握小结内容基本理论。
 
-  ​	凡具辛香走窜之性，以井窍、醒神为主要功效的药物，称开窍药，或称为芳香开窍药。
+  ​	凡具辛香走窜之性，以开窍、醒神为主要功效的药物，称开窍药，或称为芳香开窍药。
 
   开窍药气味芳香，性善走窜，多归心经，具有通关开窍、启闭醒神的作用，适用于邪陷窍闭之神昏，以及惊痫、中风等病出现的卒然昏厥之证。
 
