update ok/bc/bc18-0.0.23.0.0.md. 错字

--- a/ok/bc/bc18-0.0.23.0.0.md
+++ b/ok/bc/bc18-0.0.23.0.0.md
@@ -1,11 +1,11 @@
 ### 没石子
 
- **〔原文〕苦温入肾，涩精固气，收阴汗，乌鬍髮。出大食诸番。颗小纹细者佳。炒研用，虫食成孔者拣去。忌铜铁器。**
+ **〔原文〕苦温入肾，涩精固气，收阴汗，乌鬚髮。出大食诸番。颗小纹细者佳。炒研用，虫食成孔者拣去。忌铜铁器。**
 
 【讲解】**没石子也是收敛固涩之品**。为没石子蜂科昆虫没石子蜂的幼虫，寄生于壳斗科植物没石子树幼枝上所产生的虫瘿， 以个大、体重、色灰者为佳，已蛀孔者品质较次。炒用，捣碎入药。
 
 本品味苦性温，入肺、脾、肾经。具固气、涩精、敛肺、止 血之功，主治大肠虚滑、泻痢不止、便血、遗精、阴汗、咳嗽、 咯血、齿痛、创伤出血、疮疡久不收口等证。
 
-【临证应用】没石子洽泄泻下痢配訶黎勒。若与地榆、黄 柏、黄连、石榴皮同用，可治小儿肠虚受热，下痢鲜血，或便赤汁、腹痛后重，昼夜不止。
+【临证应用】没石子治泄泻下痢配訶黎勒。若与地榆、黄 柏、黄连、石榴皮同用，可治小儿肠虚受热，下痢鲜血，或便赤汁、腹痛后重，昼夜不止。
 
 【用量用法】 6—12克，煎汤或入丸散。外用，研末撒或调敷。
