--- a/ok/wk/wk07-0.2.0.0.0.md
+++ b/ok/wk/wk07-0.2.0.0.0.md
@@ -16,7 +16,7 @@
 
 （二）论治要点
 
-本病为乳病中之小疡，治疗多以外治法为重点，以润肤生肌之药多收效。
+本病为乳病中之小疡，治疗多以外治法为重点，以润肤生肌之药多能收效。
 
 （三）常见证治
 
@@ -32,7 +32,7 @@
 
 2.湿热证：
 
-主证：乳头皲裂，局部糜烂流津，表面结黄痂，哺乳时痛痒难忍。乳头属肝，糜烂结黄痴乃湿热之征。
+主证：乳头皲裂，局部糜烂流津，表面结黄痂，哺乳时痛痒难忍。乳头属肝，糜烂结黄痂乃湿热之征。
 
 治法：清热利湿。
 
