--- a/ok/bc/bc18-0.0.24.0.0.md
+++ b/ok/bc/bc18-0.0.24.0.0.md
@@ -4,9 +4,10 @@
 
 五味子、五倍子、乌梅、訶子、罂粟壳均有敛肺止咳、涩肠止泻之效，治肺虚久咳、肠滑久泻之征。其中五味子还能生津敛汗、涩精止遗，具有安神之功；五倍子亦能止汗，外用则治疮癣肿毒、皮肤湿烂；乌梅并能生津止渴，又为安蛔治厥之良药，对蛔厥腹痛有较好的疗效；訶子生用能清肺热，可治久咳失音，煨用主涩肠止泻；罂粟壳并有止痛之效。
 
-肉豆蔻、赤石脂、禹余粮、石檣皮均能涩肠止泻，以治久泻各痢为主。其中肉豆蔻还能温中行气；赤石脂，禹余粮又能止大:便下血；石榴皮则兼杀虫。
+肉豆蔻、赤石脂、禹余粮、石榴皮均能涩肠止泻，以治久泻各痢为主。其中肉豆蔻还能温中行气；赤石脂，禹余粮又能止大:便下血；石榴皮则兼杀虫。
 
-小麦功专养心除烦，以治脏躁，靡伤欲哭之证。浮小麦以止， 汗为功，主治自汗盗汗。乌贼骨专于收敛，有止血止带之功，以治崩漏带下、吐血便血及胄痛呑酸等证。椿樗白皮燥湿清热，可治赤白带下，并能止泻止血。白果有敛肺止咳喘之能，久嗽咳喘宜之，尚可止带浊。
+小麦功专养心除烦，以治脏躁，悲伤欲哭之证。浮小麦以止， 汗为功，主治自汗盗汗。乌贼骨专于收敛，有止血止带之功，以治崩漏带下、吐血便血及胃
+痛呑酸等证。椿樗白皮燥湿清热，可治赤白带下，并能止泻止血。白果有敛肺止咳喘之能，久嗽咳喘宜之，尚可止带浊。
 
 莲子益脾肾，且固涩，用于脾虚久泻、肾虚滑精，还能交通心肾，以治惊悸失眠；莲蕊鬚清心固肾、涩精止血；莲子心性寒， 以清心热为主，治温热病烦热神昏；莲房化瘀止血；荷叶能清暑利湿，用于暑热病证，且又开阳止血，治疗脾虚泄泻及多种出血证。
 
