update ok/bc/bc18-0.0.24.0.0.md. 错字

--- a/ok/bc/bc18-0.0.24.0.0.md
+++ b/ok/bc/bc18-0.0.24.0.0.md
@@ -22,8 +22,8 @@
 | 乌梅     | 酸、涩平             | 肝、脾、肺、大肠 | 敛肺涩肠，    生津驱蛔，    外消疮毒   | ①肺虚久咳②久泻久痢，③虚热消渴④蛔厥腹痛呕吐⑤胬肉外突          | 3—10克    大剂量30克外用适量  |                              |
 | 肉豆蔻   | 辛、温               | 脾、胃、大肠     | 涩肠止泻，    温中行气                 | ①久泻不止②脘腹寒痛、食少呕吐                                 | 3—10克    入丸散为1.5—3克     | 煨熟可增强温中止泻作用。     |
 | 诃子     | 苦、酸、涩、平       | 肺、大肠         | 涩肠止泻，敛肺止咳                     | ①久泻久痢②久咳失音                                           | 3—10克                        | 生用敛肺利咽，煨用涩肠止泻。 |
-| 石赤脂   | 甘、酸、涩、温       | 大肠、胃         | 涩肠止泻止血；外用收涩生肌敛疮         | ①久泻久痢、便血、脱肛②疮疡溃破久不收口                       | 10—20克外用适量               | 包煎                         |
-| 余禹粮   | 甘、涩、平           | 胃、大肠         | 涩肠止泻，收敛止血                     | ①久泻久痢②崩漏带下                                           | 10—20克                       | 孕妇忌用                     |
+| 赤石脂   | 甘、酸、涩、温       | 大肠、胃         | 涩肠止泻止血；外用收涩生肌敛疮         | ①久泻久痢、便血、脱肛②疮疡溃破久不收口                       | 10—20克外用适量               | 包煎                         |
+| 禹余粮   | 甘、涩、平           | 胃、大肠         | 涩肠止泻，收敛止血                     | ①久泻久痢②崩漏带下                                           | 10—20克                       | 孕妇忌用                     |
 | 石榴皮   | 酸、涩、瘟           | 胃、大肠         | 涩肠止泻，杀虫                         | ①久泻久痢、脱肛②虫积腹痛    ③外用治牛皮癣                    | 3—10克外用适量                |                              |
 | 海螵蛸   | 咸、涩、微温         | 肝、肾           | 收敛止血，固精止带，制酸止痛，收湿敛疮 | ①崩漏、肺胃出血、创伤出血②遗精、带下③胃痛泛酸④湿疹、溃疡多脓 | 6—12克，研末服1.5—3克外用适量 |                              |
 | 芡实     | 甘、涩平             | 脾、肾           | 益肾固精，健脾止泻，祛湿止带           | ①遗精遗尿②脾虚泄泻、白带                                     | 10—15克                       |                              |
@@ -37,7 +37,7 @@
 | 椿樗白皮 | 苦、涩、寒           | 大肠、胃、肝     | 清热燥湿，涩肠，止带，止血，杀虫       | ①湿热泻痢、久泻久痢②崩漏带下③疥癣湿疮                        | 3—5克                         |                              |
 | 白果     | 甘、苦、涩、平有小毒 | 肺               | 敛肺平喘，固涩止带                     | ①肺气不敛，咳嗽气喘②白浊带下                                 | 6—10克                        |                              |
 | 粟罂壳   | 酸、涩、平           | 肺、大肠、肾     | 敛肺，涩肠，止痛                       | ①肺虚久咳②久泻久痢③心腹筋骨诸痛                              | 3—10克                        | 止咳宜蜜炙，止泻止痛宜醋炒。 |
-| 刺猬皮   | 苦、平               | 胃、大肠、肾     | 收敛止血，固精缩尿                     | ①便血、痔漏②遗精、遗尿                                       | 3—10克研未服1.5—3克           |                              |
+| 刺猬皮   | 苦、平               | 胃、大肠、肾     | 收敛止血，固精缩尿                     | ①便血、痔漏②遗精、遗尿                                       | 3—10克 研末服1.5—3克           |                              |
 | 没石子   | 苦、温               | 肺、脾、肾       | 涩精，敛肺，止血                       | ①泻痢不止、便血②创伤出血，疮疡久不收口                       | 6—12克                        |                              |
 
 复习思考题
