update ok/hk/hk1gl01-0.4.0.0.0.md. 标题字体缩小 1000/mm<sup>3</sup>以上 加上标，另8应是3误

--- a/ok/hk/hk1gl01-0.4.0.0.0.md
+++ b/ok/hk/hk1gl01-0.4.0.0.0.md
@@ -1,4 +1,4 @@
-## 风热喉痹之四（传染性单核细胞增多性咽峡炎）
+## 风热喉痹<small>之四（传染性单核细胞增多性咽峡炎）</small>
 
 本病和粒性细胞缺乏性咽峡炎一样，过去中医也没有这样专用病名。但中医喉科书中记载的特别丰富，纵然在临床上是一个比较不常见的疾病。它是一种急性或亚急性传染病。最典型的表现是颈部淋巴结肿大和咽峡炎同时出现。
 
@@ -26,7 +26,7 @@
 
 〔诊断〕
 
-以血片中异常淋巴细胞占总数的10%，或绝对值在1000/mm8以上，且血清嗜异性凝集试验效价达1:200以上者。有明显的临床症状及体征。
+以血片中异常淋巴细胞占总数的10%，或绝对值在1000/mm<sup>3</sup>以上，且血清嗜异性凝集试验效价达1:200以上者。有明显的临床症状及体征。
 
 〔常见证因〕
 
