--- a/ok/bc/bc08-0.0.4.0.0.md
+++ b/ok/bc/bc08-0.0.4.0.0.md
@@ -6,6 +6,6 @@
 
   本品味辛性温，入心、脾经。其气香烈，开窍辟秽之功与麝香相似。而力稍逊。凡中风、痰厥、气厥等卒然昏倒的寒闭危急之证，皆可以此开之。本品开窍辟秽、开郁祛浊之功较好，故可间接地达到良好的止痛效果，以治心腹疼痛。
 
-  【临证应用3】苏合香用于中风、中气，卒然昏倒、牙闭紧闭、不省人事，及痰壅气闭，突然昏迷，或心腹疼痛等证，可与安息香、麝香、冰片、丁香、檀香等同用，如苏合香丸。近年以本品配伍檀香、冰片、乳香等，用于冠心病心绞痛，能较快地缓解疼痛，如冠心苏令丸。
+  【临证应用】苏合香用于中风、中气，卒然昏倒、牙闭紧闭、不省人事，及痰壅气闭，突然昏迷，或心腹疼痛等证，可与安息香、麝香、冰片、丁香、檀香等同用，如苏合香丸。近年以本品配伍檀香、冰片、乳香等，用于冠心病心绞痛，能较快地缓解疼痛，如冠心苏合丸。
 
   【用量用法】 0.3-1克。多入丸剂，不入煎剂。
