--- a/ok/bc/bc08-0.0.5.0.0.md
+++ b/ok/bc/bc08-0.0.5.0.0.md
@@ -4,7 +4,7 @@
 
   【讲解】（1）噤口毒痢：病名。指痢疾患者不进饮食或呕不能食，为痢疾比较严重的证候。（2）胎漏：指妊娠前半期阴道不时少量出血，或点滴不尽，或时有时无。
 
-石菖蒲善化湿浊之邪，而具开窍豁痰之功。为天南星科多年 生草本植物石菖蒲的根茎。早春采挖，去叶，洗净晒干，生用。  鲜品亦入药，,现多以植物细叶菖蒲的带叶根茎鲜品入药，称鲜菖蒲，或钱菖蒲。每多盆中栽培，既供观赏，又可供四时收用。鲜者气味皆足，芳香开窍之力较强，但常用者仍多为干品。
+石菖蒲善化湿浊之邪，而具开窍豁痰之功。为天南星科多年生草本植物石菖蒲的根茎。早春采挖，去叶，洗净晒干，生用。鲜品亦入药,现多以植物细叶菖蒲的带叶根茎鲜品入药，称鲜菖蒲，或钱菖蒲。每多盆中栽培，既供观赏，又可供四时收用。鲜者气味皆足，芳香开窍之力较强，但常用者仍多为干品。
 
 本品味辛性温，疏散开达，气味芳香，其性走窜，具有化湿豁痰、辟秽开窍之功。入心、胃经，入胃宣化湿浊、醒脾开胃； 入胸膈则疏利痰浊，振奋清阳之气，开通心窍，聪耳明目而醒神健脑。故凡痰浊蒙闭、清阳不升而引起的神志昏迷、耳聋失聪、头目不清、癫狂痴呆，以及湿浊中阻，脘腹疼痛、噤口下痢等证，均为常用之品。惟性燥散，阴虚血亏及滑精多汗者不宜用。
 
