update ok/bc/bc19-0.0.5.0.0.md. 错字

--- a/ok/bc/bc19-0.0.5.0.0.md
+++ b/ok/bc/bc19-0.0.5.0.0.md
@@ -2,14 +2,14 @@
 
 涌吐药以促使呕吐为主要作用。凡毒物、宿食或痰涎在人体上部者均可选用。本类药均有毒，且作用强烈，故只适用于体壮邪实之人。
 
-涌吐药虽有催吐之共性，但每味药又有其特点。其中瓜蒂、胆矾、藜芦均可外用，瓜蒂研末吹鼻，以去湿热，可治湿热黄疽等证；胆矾外用解毒收湿，多用治眼、口、牙等热毒之证，用量稍大又可蚀疮去腐；藜芦外用杀虫止痒，用于一些皮肤病及杀蚊蝇、灭虱。常山则善能祛痰截疟，酒炒后用于各种疟疾有良效；蜀漆乃常山之嫩枝叶，涌吐之力胜于常山。
+涌吐药虽有催吐之共性，但每味药又有其特点。其中瓜蒂、胆矾、藜芦均可外用，瓜蒂研末吹鼻，以去湿热，可治湿热黄疸等证；胆矾外用解毒收湿，多用治眼、口、牙等热毒之证，用量稍大又可蚀疮去腐；藜芦外用杀虫止痒，用于一些皮肤病及杀蚊蝇、灭虱。常山则善能祛痰截疟，酒炒后用于各种疟疾有良效；蜀漆乃常山之嫩枝叶，涌吐之力胜于常山。
 
 涌吐药功用归纳简表
 
 | 药名 | 性味             | 归经       | 功效                                                  | 主治                                                         | 用量                    | 备注                                          |
 | ---- | ---------------- | ---------- | ----------------------------------------------------- | ------------------------------------------------------------ | ----------------------- | --------------------------------------------- |
 | 瓜蒂 | 苦、寒有毒       | 胃         | 内服：涌 吐 热 痰、宿食；<br />外用：研末吹鼻去湿热； | ①热痰、宿食<br />②湿热黄疸                                   | 2.5—5克入丸散0.3—1克    |                                               |
-| 常山 | 苦、辛、寒、有毒 | 肺、心、肝 | 涌吐痰诞，截疟                                        | ①疟疾<br />@胸中痰饮                                         | 5—10克                  | 截疟酒炒，涌吐生用。蜀漆功同常山，用量3—6克。 |
+| 常山 | 苦、辛、寒、有毒 | 肺、心、肝 | 涌吐痰涎，截疟                                        | ①疟疾<br />@胸中痰饮                                         | 5—10克                  | 截疟酒炒，涌吐生用。蜀漆功同常山，用量3—6克。 |
 | 胆矾 | 酸、辛、寒、有毒 | 肝、胆     | 内服：涌吐风痰，毒物；<br />外用：解毒收湿，蚀疮去腐  | ①风痰壅塞，喉痹、癫痫<br />②风眼赤烂、口疮、牙疳<br />③肿毒不破或胬肉疼痛 | 0.3—0.6克外用适量       |                                               |
 | 藜芦 | 辛、苦、寒、有毒 | 肺、胃、肝 | 内服：涌吐风痰；<br />外用：杀虫止痒                  | ①痰涎壅盛之中风、癫痫、喉痹<br />②疥癣秃疮                   | 0.3—0.9克入丸散外用适量 | 近人有用于杀灭蚊蝇者                          |
 
