--- a/ok/wk/wk02.md
+++ b/ok/wk/wk02.md
@@ -126,9 +126,9 @@
 
 疮疡的病理变化有红肿热痛（或隐痛硬结）、成脓破溃、生肌长皮和“走黄”、“內陷”等几个方面。这些基本反映了疮疡的发生和演变规律。现分别从以下几点论述疮疡的病机。
 
-1.气血壅结：由于外邪侵犯或脏腑结热，五志化火等原因，使人体循环不息的气血功能破坏，经络阻塞；而形成局部的气血凝滞，或蕴结于肌肉，或滞留于筋骨。气血蕴结，不通则痛，局部则见肿胀疼痛。若失治或误治，气血蕴结未得解除，正气尚盛则邪气郁久而从热化，局部遂可出现焮红、热痛等征象，此即阳证。如痈、疽、疔、疖、流注等证的发生，皆为这种病理变化的结果。若素体虚弱，正气不足，不能从热化；或肾虚骼空，阴邪乘袭；或脾胃虚弱，痰湿内生，与郁结之肝气相搏，留注筋骨，则局部不红不热，只有隐隐作痛或酸痛，局部硬结或漫肿；或经年累月.慢慢化热，局部才微红微热，转向化脓阶段，此为阴证。如瘰疬、痰核、流痰等证，皆为这种病理变化的结果。
+1.气血壅结：由于外邪侵犯或脏腑结热，五志化火等原因，使人体循环不息的气血功能破坏，经络阻塞，而形成局部的气血凝滞，或蕴结于肌肉，或滞留于筋骨。气血蕴结，不通则痛，局部则见肿胀疼痛。若失治或误治，气血蕴结未得解除，正气尚盛则邪气郁久而从热化，局部遂可出现焮红、热痛等征象，此即阳证。如痈、疽、疔、疖、流注等证的发生，皆为这种病理变化的结果。若素体虚弱，正气不足，不能从热化；或肾虚骼空，阴邪乘袭；或脾胃虚弱，痰湿内生，与郁结之肝气相搏，留注筋骨，则局部不红不热，只有隐隐作痛或酸痛，局部硬结或漫肿；或经年累月慢慢化热，局部才微红微热，转向化脓阶段，此为阴证。如瘰疬、痰核、流痰等证，皆为这种病理变化的结果。
 
-2.热盛肉腐：不论是阳证还是阴证的疮疡，在发病初期不得消散者，病程或速或慢，病变皆继续发展。局部气血壅滞，不能疏通，愈久化热愈盛，遂使血肉腐败，酝酿液化而成脓。如《灵枢•痈疽》说，“营卫稽留于经脉之中，则血泣而不行；不行则卫气从之而不通，壅遏不得行，故热；大热不止，热胜则肉腐，肉腐则为脓。”这便是脓形成的机理，也是局部气血凝滞，进一步发展变化的病理过程。脓成熟到一定程度，局部皮肤亦被腐蚀破溃。于是由肿疡变为溃疡。
+2.热盛肉腐：不论是阳证还是阴证的疮疡，在发病初期不得消散者，病程或速或慢，病变皆继续发展。局部气血壅滞，不能疏通，愈久化热愈盛，遂使血肉腐败，酝酿液化而成脓。如《灵枢•痈疽》说，“营卫稽留于经脉之中，则血泣而不行；不行则卫气从之而不通，壅遏不得行，故热；大热不止，热胜则肉腐，肉腐则为脓”。这便是脓形成的机理，也是局部气血凝滞，进一步发展变化的病理过程。脓成熟到一定程度，局部皮肤亦被腐蚀破溃。于是由肿疡变为溃疡。
 
 3.生肌长皮：疮疡破溃之后，毒随脓泄，若脏腑正气恢复，气血充足，则腐肉脱落，新肉生长；长皮敛口，气血恢复运行而愈；若气血不足，则腐肉不脱，新肉生长缓慢，难于收敛。可见生肌收口，与脾胃功能正常，气血充沛有关。
 
@@ -142,7 +142,7 @@
 
 卒腹痛大致可分两大类：第一类是气机不利或气血郁闭所致，多出现在疾病的早期，相对而言病势较轻。第二类是脏器梗阻不通所致，多出现在前一类腹痛之后，病势较重。
 
-1.气机不利，由于饮食失节，劳倦内伤或情志暴动等因素，使六腑气机不畅，气滞血瘀。具体言之，营行脉内，卫行脉外，并行不悖，周流不息。气遇邪而郁，则津液稠粘，为痰为饮，积久渗入脉中则血变污浊。血受邪而滞，则经隧阻隔，或溢或结，则气血之正常循行受阻而不通，不通则痛。如肠痈、现代医学的急性胆道感染等病的早期疼痛，均为这类病机变化。同是上述原因，若作用于素体脾胃虚寒有胃肠溃疡病的患者时，则可导致脾胃气血郁闭而引起剧烈绞痛，甚至昏厥。
+1.气机不利：由于饮食失节，劳倦内伤或情志暴动等因素，使六腑气机不畅，气滞血瘀。具体言之，营行脉内，卫行脉外，并行不悖，周流不息。气遇邪而郁，则津液稠粘，为痰为饮，积久渗入脉中则血变污浊。血受邪而滞，则经隧阻隔，或溢或结，则气血之正常循行受阻而不通，不通则痛。如肠痈、现代医学的急性胆道感染等病的早期疼痛，均为这类病机变化。同是上述原因，若作用于素体脾胃虚寒有胃肠溃疡病的患者时，则可导致脾胃气血郁闭而引起剧烈绞痛，甚至昏厥。
 
 2.六腑通降功能减低或丧失：这是上述病理变化发展的继续。六腑的功能在于饮食的摄入、消化、吸收和排泄。这一过程必须不断运行，不能停滞，故古人科学地概括为“六腑以通为用”。六腑气机不利则往往造成六腑梗阻不通。不通则出现剧烈的持续性腹痛，同时伴有严重的全身症状，如发烧、呕吐、便秘或黄疸等等。象肠结、胆石症、胆道蛔虫症、严重肠痈和石淋等病均有这类病理变化。
 
@@ -152,7 +152,7 @@
 
 5.毒入营血，内攻脏腑：明代张景岳说：“厥者，逆也，气逆则乱，故忽为眩仆脱厥。”在卒腹痛危重时常有突然昏倒，不省人事，或伴有四胀（注：原文为“四胀”，疑为“四肢”）逆冷的厥证。这多因毒热炽盛，或大吐大汗，大量失血等，致使阴阳失调，正不胜邪，毒入营血，内攻脏腑，令人神昏魂荡而发此证，如若得不到及时和恰当治疗，可由厥转脱，甚或亡阴、亡阳，及至阴阳离决死亡。此为多数卒腹痛得不到恰当治疗的转归之一。
 
-总之，卒腹痛的总病机多由气机不利，气滞血瘀，引起六腑通降功能降也或丧失，以致梗阻闭塞，从而邪郁化热，伤阴，动风，最后导致气血逆乱，阴阳离决。若正气来复，梗阻解除，气血和调则可痊愈。可见卒腹痛病机的特点是六腑不通。所以，如果我们能及时疏通气血，解除六腑梗阻，则其它病症迎刃而解，可见古人总结的“通则不痛”是有科学道理的。
+总之，卒腹痛的总病机多由气机不利，气滞血瘀，引起六腑通降功能降低或丧失，以致梗阻闭塞，从而邪郁化热，伤阴，动风，最后导致气血逆乱，阴阳离决。若正气来复，梗阻解除，气血和调则可痊愈。可见卒腹痛病机的特点是六腑不通。所以，如果我们能及时疏通气血，解除六腑梗阻，则其它病症迎刃而解，可见古人总结的“通则不痛”是有科学道理的。
 
 （三）皮肤病
 
@@ -168,7 +168,7 @@
 
 3.起疱：可分水疱、脓疱两大类。水疱多由于湿热或热毒之邪蕴结皮肤，不得疏泄，聚结成疱，如缠腰火丹、湿疮、天疱疮，丹毒等病之疱，脓疱多由火毒侵犯肌肤，热毒炽盛，肌肤化脓，故疱内含有脓液，周围常有红晕，疱破后糜烂流脓，最后结痂而愈，如脓窠疮等。
 
-4.斑疹：斑为皮肤色泽变化，而无形态改变，斑有红白之分。白斑因外邪侵入毛孔，以致气机不利，肌肤失养而成，如白驳风等。红斑多由外邪内传，导致血热瘀结于肌肤而成，如酒皶鼻、丹毒等。有的斑片板硬，有腊样光泽，伴有畏寒肢冷，腹胀便溏、阳痿等全身症状，这多由素体阳虚，加之严寒外袭，或命门火衰，火不生土，脾肾阳虚所致，如硬皮病。还有的斑片，色红或暗红，多在面部呈蝶形，多伴有全身各系统的症状，如低热，头晕乏力，腰膝酸痛，口干唇燥等症，多由于先天不足，阴虚火旺所致。疹是限局的、实体的、隆起于皮肤表面的损害，不含液体，多为小米粒到豌豆大小。急性者色红，多属风热之邪，深入营血，血热则不能行于脉中，而溢于脉外，熏蒸于皮肤，而丘疹隐现，如风疹、药疹等。慢性者常呈正常肤色或深暗色，多为气滞或血瘀。
+4.斑疹：斑为皮肤色泽变化，而无形态改变，斑有红白之分。白斑因外邪侵入毛孔，以致气机不利，肌肤失养而成，如白驳风等。红斑多由外邪内传，导致血热瘀结于肌肤而成，如酒皶鼻、丹毒等。有的斑片板硬，有腊样光泽，伴有畏寒肢冷，腹胀便溏、阳痿等全身症状，这多由素体阳虚，加之严寒外袭，或命门火衰，火不生土，脾肾阳虚所致，如硬皮病。还有的斑片，色红或暗红，多在面部呈蝶形，多伴有全身各系统的症状，如低热、头晕乏力、腰膝酸痛、口干唇燥等症，多由于先天不足，阴虚火旺所致。疹是限局的、实体的、隆起于皮肤表面的损害，不含液体，多为小米粒到豌豆大小。急性者色红，多属风热之邪，深入营血，血热则不能行于脉中，而溢于脉外，熏蒸于皮肤，而丘疹隐现，如风疹、药疹等。慢性者常呈正常肤色或深暗色，多为气滞或血瘀。
 
 总之，皮肤病的病机特点为：外在的肌肤病变，是脏腑失调，气血失和，阴阳偏胜的结果，即“有诸内而必形诸外”。皮肤病的治疗，应该调整脏腑气血，使阴阳平衡，处处不能离开“治外必本诸内”的基本理论。
 
