--- a/ok/bc/bc08.md
+++ b/ok/bc/bc08.md
@@ -13,7 +13,7 @@
 
 4. 联系牛黄、皂荚、郁金、远志等具有开窍作用的药物，了解本章以外的开窍药，扩大知识面。
 
-5. 在自学本章全部内容的基础，重点掌握小结内容基本理论。
+5. 在自学本章全部内容的基础，重点掌握小结内容。
 
   ​	凡具辛香走窜之性，以开窍、醒神为主要功效的药物，称开窍药，或称为芳香开窍药。
 
