update ok/fjx/fjx01-0.6.0.0.0.md. “浮萍巰风透热”改为“浮萍疏风透热” 牛蒡利膈清咽、 、改为，

--- a/ok/fjx/fjx01-0.6.0.0.0.md
+++ b/ok/fjx/fjx01-0.6.0.0.0.md
@@ -12,8 +12,8 @@
 
 本方也可用于麻疹初起、流感、乳蛾红肿，以及一切发热性流行病，如暑温、痄腮等呈现卫分风热表证者。
 
-如邪阻气分，胸膈满闷加藿香、郁金，以芳香化浊、疏利气机；津伤口渴，加天花粉生津清热；持续高热，加生石膏清泻火热。风热蕴毒在表，项肿咽痛（包括痄腮），加马勃、元参、板蓝根解毒消肿。清肺利咽。腮肿疼痛，加夏枯草、僵蚕清泻肝火、散结消肿。肺热失宣，咳嗽较甚，加杏仁、酒芩清热利肺。咯痰稠黄，加酒芩、知母、瓜蒌清化痰热。若颔下肿核疼痛，加射干、僵蚕、瓜蒌、贝母，以清化热痰而散结。时行热毒症状明显，加大青叶、板蓝根、蒲公英，以清热解毒。热伤阳络衄血，去荆芥、豆豉之辛温，加茅根、侧柏炭、栀子炭，以凉血止血。热入营分，舌红甚的，加细生地、麦冬，以清热保津。热伤津液，小便短少，加知母、黄芩、栀子之苦寒清热，与麦冬、生地之甘寒化阴生津。如麻疹疹色红赤，加生地、赤芍凉血活血；疹发不畅，高热无汗，加蝉衣、浮萍巰风透热。疮疡初起兼表证的，加蒲公英、紫花地丁、大青叶解毒消痈。如大便秘结，舌苔根部偏黄厚，可加枳实、瓜蒌利肠通便。
+如邪阻气分，胸膈满闷加藿香、郁金，以芳香化浊、疏利气机；津伤口渴，加天花粉生津清热；持续高热，加生石膏清泻火热。风热蕴毒在表，项肿咽痛（包括痄腮），加马勃、元参、板蓝根解毒消肿。清肺利咽。腮肿疼痛，加夏枯草、僵蚕清泻肝火、散结消肿。肺热失宣，咳嗽较甚，加杏仁、酒芩清热利肺。咯痰稠黄，加酒芩、知母、瓜蒌清化痰热。若颔下肿核疼痛，加射干、僵蚕、瓜蒌、贝母，以清化热痰而散结。时行热毒症状明显，加大青叶、板蓝根、蒲公英，以清热解毒。热伤阳络衄血，去荆芥、豆豉之辛温，加茅根、侧柏炭、栀子炭，以凉血止血。热入营分，舌红甚的，加细生地、麦冬，以清热保津。热伤津液，小便短少，加知母、黄芩、栀子之苦寒清热，与麦冬、生地之甘寒化阴生津。如麻疹疹色红赤，加生地、赤芍凉血活血；疹发不畅，高热无汗，加蝉衣、浮萍疏风透热。疮疡初起兼表证的，加蒲公英、紫花地丁、大青叶解毒消痈。如大便秘结，舌苔根部偏黄厚，可加枳实、瓜蒌利肠通便。
 
 本方去荆芥、薄荷、淡豆豉、桔梗、牛蒡子、加麦冬、生地滋阴凉血以资汗源，方名银翘汤（《温病条辨》），是主治风温热邪半在气分（舌苔黄）与半在营分（舌质红）之方剂。原书载治温病下后，无汗脉浮，余邪郁于肌表，有阴伤情况者。
 
-〔方论选录〕张秉成：“治风温温热，一切四时温邪，病从外来，初起身热而渴，不恶寒，邪全在表者，此方吴氏《温病条辨》中之首方。所治之温病与瘟疫之瘟不同，而又与伏邪之温病有别。此但言四时之温邪，病于表而客于肺者，故以辛凉之剂轻解上焦，银花、连翘、薄荷、荆芥皆辛凉之品，轻扬解散，清利上焦者也，豆豉宣胸化腐，牛蒡利膈清咽、竹叶、芦根清肺胃之热而下达，桔梗、甘草解胸膈之结而上行。此淮阴吴氏特开客气温邪之一端，实前人所未发耳。”（《成方便读》）
+〔方论选录〕张秉成：“治风温温热，一切四时温邪，病从外来，初起身热而渴，不恶寒，邪全在表者，此方吴氏《温病条辨》中之首方。所治之温病与瘟疫之瘟不同，而又与伏邪之温病有别。此但言四时之温邪，病于表而客于肺者，故以辛凉之剂轻解上焦，银花、连翘、薄荷、荆芥皆辛凉之品，轻扬解散，清利上焦者也，豆豉宣胸化腐，牛蒡利膈清咽，竹叶、芦根清肺胃之热而下达，桔梗、甘草解胸膈之结而上行。此淮阴吴氏特开客气温邪之一端，实前人所未发耳。”（《成方便读》）
