update ok/fjx/fjx01-0.7.0.0.0.md.  桔梗二钱〈6克） 〈改为（

--- a/ok/fjx/fjx01-0.7.0.0.0.md
+++ b/ok/fjx/fjx01-0.7.0.0.0.md
@@ -1,6 +1,6 @@
 ## 桑菊饮《温病条辨》
 
-〔组成〕桑叶二钱五分（10克） 菊花一钱（10克） 杏仁二钱（10克） 连翘一钱五分（10克） 薄荷八分（6克） 桔梗二钱〈6克）甘草八分（3克） 芦根二钱（15克）
+〔组成〕桑叶二钱五分（10克） 菊花一钱（10克） 杏仁二钱（10克） 连翘一钱五分（10克） 薄荷八分（6克） 桔梗二钱（6克）甘草八分（3克） 芦根二钱（15克）
 
 〔煎服法〕原方水二杯，煮取一杯，日二服。（水煎服）
 
