update ok/fjx/fjx01-0.8.0.0.0.md. 蜂蜜清热润燥解毒使药下行以为导， ，改为。 杨玉衡（栗山)   )改为） 所以能祛凤而胜湿  “凤”改为风 复习思考题  1到11 、改为.

--- a/ok/fjx/fjx01-0.8.0.0.0.md
+++ b/ok/fjx/fjx01-0.8.0.0.0.md
@@ -4,34 +4,34 @@
 
 〔煎服法〕共为细末，病轻者分四次服，每服重一钱八分二厘五毫，用黄酒一盅，蜂蜜半两调匀冷服，中病即止。病重者，分三次服，每服重二钱四分三厘三毫，黄酒盅半，蜜八钱，调匀冷服。最重者，分两次服，每服重三钱六分五厘，黄酒二盅，蜜一两，调匀冷服。炼蜜丸名太极丸，服法同前。（水煎服）
 
-〔讲解〕本方主治表里三焦大热及大头瘟。方用僵蚕祛风化痰、清热解郁，蝉衣疏风清热解毒，以升发三焦清阳之气而为君臣，姜黄行气活血为佐，寓“治风先行血，血行风自灭”之意。大黄苦寒沉降，以降泄亢盛之阳以为使，更用黄酒内通脏腑经络，驱逐邪气引药上行以为引，蜂蜜清热润燥解毒使药下行以为导，诸药合用，补泻兼行，寒热并用，有升有降，具升清降浊、表里同治之效。方名“升降散”也是因此而得名。
+〔讲解〕本方主治表里三焦大热及大头瘟。方用僵蚕祛风化痰、清热解郁，蝉衣疏风清热解毒，以升发三焦清阳之气而为君臣，姜黄行气活血为佐，寓“治风先行血，血行风自灭”之意。大黄苦寒沉降，以降泄亢盛之阳以为使，更用黄酒内通脏腑经络，驱逐邪气引药上行以为引，蜂蜜清热润燥解毒使药下行以为导。诸药合用，补泻兼行，寒热并用，有升有降，具升清降浊、表里同治之效。方名“升降散”也是因此而得名。
 
 〔临证应用〕本方适用于表里三焦大热，风热夹滞，以及升降失调或气血郁结诸病。
 
 如头痛眩晕，胸膈胀闷，心腹疼痛，呕哕吐食者；如内烧作渴，上吐下泻，身不发热者；如憎寒壮热，一身骨节酸痛，饮水无度者；如四肢厥冷，身凉如冰，而气喷如火，烦躁不宁者；如身热如火，烦渴引饮，头面猝肿，其大如斗者；如咽喉肿痛，痰涎壅盛，滴水不能下咽者；如遍身红肿，发块如瘤者，如斑疹杂出，有似丹毒风疮者；如胸高胁起胀痛，呕如血汁者；如血从鼻口出，或目出，或牙缝出，毛孔出者；如血从大便出，甚如烂瓜肉，屋漏水者；如小便涩淋如血，滴点作疼，不可忍者；如小便不通，大便火泻无度，腹痛肠鸣如雷者；如便清泻白，足重难移者；如肉瞤筋惕者；如舌卷囊缩者；如舌出寸许，绞扰不住，音声不出者；如谵语狂乱，不省人事，如醉如痴者；如头疼如破，腰痛如折，满面红肿，目不能开者；如热盛神昏，形如醉人，哭笑无常，目不能闭者；如手舞足蹈，见神见鬼，似疯癫狂祟者；如误服发汗之药，变为亡阳之证，而发狂叫跳，或昏不识人者。
 
-〔方论选录〕杨玉衡（栗山)：“僵蚕味辛苦气薄，喜燥恶湿，得天地清化之气，轻浮而升阳中之阳，故能胜风除湿，清热解郁，从治膀胱相火，引清气上朝于口，散逆浊结滞之痰也。其性属火，兼土与木，老得金水之化，僵而不腐，温病火炎土燥，焚木烁金，得秋分之金气而自衰，故能辟一切怫郁之邪气。夫蚕必三眠三起，眠者病也，合簿皆病，而皆不食也；起者愈也，合簿皆愈，而皆能食也。因此而治合家之温病，所谓因其气相感，而以意使之者也，故为君。夫蝉气寒无毒，味咸且甘，为清虚之品，出粪土之中，处极高之上，自感风露而己。吸风得清阳之真气，所以能祛凤而胜湿；饮露得太阴之精华，所以能涤热而解毒也。蜕者，退也，盖欲使人退去其病，亦如蝉之蜕，然无恙也。亦所谓因其气相感，而以意使之者也，故为臣。姜黄气味辛苦，大寒（应为温）无毒，蛮人生啖，喜其祛邪伐恶，行气散郁，能入心脾二经建功辟疫，故为佐。大黄味苦，大寒无毒，上下通行。盖亢甚之阳，非此莫抑，苦能泻火，苦能补虚，一举而得之。人但知建良将之大勋，而不知有良相之硕德也，故为使。米酒性大热，味辛苦而甘，令饮冷酒，欲其行迟传化以渐，上行头面，下达足膝，外周毛孔，内通脏腑经络，驱逐邪气，无处不到。如物在高颠，必奋飞冲举以取之。物在远方及深奥之处，更必迅奔探索以取之。且喜其和血养气，伐邪辟秽，仍是华佗旧法，亦屠苏之义也，故为引。蜂蜜甘平无毒，其性大凉，主治丹毒斑疹，腹内留热，呕吐便秘，欲其清热润燥，而自散温毒也，故为导。盖蚕食而不饮，有大便无小便，以清化而升阳；蝉饮而不食，有小便而无大便，以清虚而散火。君明臣良，治化出焉。姜黄辟邪而靖疫；大黄定乱以致治，佐使同心，功绩建焉。酒引之使上行，蜜润之使下导，引导协力，远近通焉。补泻兼行，无偏胜之弊，寒热并用，得时中之宜。……名曰升降散，盖取僵蚕、蝉蜕，升阳中之清阳；姜黄、大黄，降阴中之浊阴，一升一降，内外通和，而杂气之流毒顿消矣。”
+〔方论选录〕杨玉衡（栗山）：“僵蚕味辛苦气薄，喜燥恶湿，得天地清化之气，轻浮而升阳中之阳，故能胜风除湿，清热解郁，从治膀胱相火，引清气上朝于口，散逆浊结滞之痰也。其性属火，兼土与木，老得金水之化，僵而不腐，温病火炎土燥，焚木烁金，得秋分之金气而自衰，故能辟一切怫郁之邪气。夫蚕必三眠三起，眠者病也，合簿皆病，而皆不食也；起者愈也，合簿皆愈，而皆能食也。因此而治合家之温病，所谓因其气相感，而以意使之者也，故为君。夫蝉气寒无毒，味咸且甘，为清虚之品，出粪土之中，处极高之上，自感风露而己。吸风得清阳之真气，所以能祛风而胜湿；饮露得太阴之精华，所以能涤热而解毒也。蜕者，退也，盖欲使人退去其病，亦如蝉之蜕，然无恙也。亦所谓因其气相感，而以意使之者也，故为臣。姜黄气味辛苦，大寒（应为温）无毒，蛮人生啖，喜其祛邪伐恶，行气散郁，能入心脾二经建功辟疫，故为佐。大黄味苦，大寒无毒，上下通行。盖亢甚之阳，非此莫抑，苦能泻火，苦能补虚，一举而得之。人但知建良将之大勋，而不知有良相之硕德也，故为使。米酒性大热，味辛苦而甘，令饮冷酒，欲其行迟传化以渐，上行头面，下达足膝，外周毛孔，内通脏腑经络，驱逐邪气，无处不到。如物在高颠，必奋飞冲举以取之。物在远方及深奥之处，更必迅奔探索以取之。且喜其和血养气，伐邪辟秽，仍是华佗旧法，亦屠苏之义也，故为引。蜂蜜甘平无毒，其性大凉，主治丹毒斑疹，腹内留热，呕吐便秘，欲其清热润燥，而自散温毒也，故为导。盖蚕食而不饮，有大便无小便，以清化而升阳；蝉饮而不食，有小便而无大便，以清虚而散火。君明臣良，治化出焉。姜黄辟邪而靖疫；大黄定乱以致治，佐使同心，功绩建焉。酒引之使上行，蜜润之使下导，引导协力，远近通焉。补泻兼行，无偏胜之弊，寒热并用，得时中之宜。……名曰升降散，盖取僵蚕、蝉蜕，升阳中之清阳；姜黄、大黄，降阴中之浊阴，一升一降，内外通和，而杂气之流毒顿消矣。”
 
 复习思考题
 
-1、使用解表剂应注意什么？
+1.使用解表剂应注意什么？
 
-2、为什么说麻黄汤是发汗之峻剂？
+2.为什么说麻黄汤是发汗之峻剂？
 
-3、麻黄汤中用炙甘草的作用是什么？
+3.麻黄汤中用炙甘草的作用是什么？
 
-4、简述麻黄汤的衍化方及其主治？
+4.简述麻黄汤的衍化方及其主治？
 
-5、使用麻黄汤应注意什么问题？
+5.使用麻黄汤应注意什么问题？
 
-6、为什么说桂枝汤是“群方之冠”？
+6.为什么说桂枝汤是“群方之冠”？
 
-7、简述桂枝汤的衍化方及其主治？
+7.简述桂枝汤的衍化方及其主治？
 
-8、小青龙汤与麻黄汤在治咳喘方面有什么不同？
+8.小青龙汤与麻黄汤在治咳喘方面有什么不同？
 
-9、怎样理解桑菊饮为辛凉轻剂、银翘散为辛凉平剂？
+9.怎样理解桑菊饮为辛凉轻剂、银翘散为辛凉平剂？
 
-10、试比较桑菊饮与银翘散的异同？
+10.试比较桑菊饮与银翘散的异同？
 
-11、简述升降散的组成和主治？
+11.简述升降散的组成和主治？
