--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -251,7 +251,7 @@
 
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。此**受五藏浊气，名曰传化之府**，此不能久留，输泻者也。
 >
-> 《素问•五藏别论篇第十一》
+> ——《素问•五藏别论篇第十一》
 
 五行之间需要维持平衡，即五脏各脏的能力应保持相对均衡，这种均衡是通过五行生克、胜复来保持的。具体见《概论》的五行章节。
 
@@ -259,11 +259,11 @@
 
 > 五脏脉已绝于内者，肾肝气已绝于内也，而医反补其心肺；五脏脉已绝于外者，心肺气已绝于外也，而医反补其肾肝。阳绝补阴，阴绝补阳，是谓实实虚虚，损不足而益有余。如此死者，医杀之耳。
 >
-> 《难经-十二难》
+> ——《难经•十二难》
 
-> **夫五运之政，犹权衡也(1)，高者抑之，下者举之，化之应之，变者复之，此生长化成收藏之理，气之常也，失常则天地四塞矣(2)。故曰，天地之动静，神明为之纪，阴阳之往复，寒暑彰其兆。此之谓也(3)。**
+> **夫五运之政，犹权衡也，高者抑之，下者举之，化之应之，变者复之，此生长化成收藏之理，气之常也，失常则天地四塞矣。故曰，天地之动静，神明为之纪，阴阳之往复，寒暑彰其兆。此之谓也。**
 >
-> 《素问•气交变大论》
+> ——《素问•气交变大论》
 >
 > 意谓五运之气保持相对平衡，自然界的生物才会有正常的生长发育，所以这是万物生长化收藏过程的自然道理,也是四时正常气候变生规律的体现。否则，平衡失常，天地四时之气就会发生闭塞。
 >
@@ -289,19 +289,19 @@
 >
 > **肝青心赤，脾脏色黄，肺白肾黑，五脏之常。**
 >
-> 《中医诊法-中药-方剂口诀--望诊》
+> 《中医诊法 中药 方剂口诀-望诊》
 
 脏腑之气各有通道进入对应的经络，是经络之气的组成部分。比如心气注入手少阴心经，如果心气不足，则在心经通道上会出现能量不足的发冷症状，其它脏腑类似。
 
 因经络互相连接，所以脏腑之气进入对应经络之后，又随经络散布到全身。人的五体皮肉脉筋骨由血转化而来，但血具体转化为其中哪一种又由脏腑之气控制。肺气侧重于养皮、心气侧重养脉、脾气侧重养肌肉、肝气侧重养筋、肾气侧重养骨。
 
-> **心之合脉**也，其荣色也，其主肾也（1）；**肺之合皮**也，其荣毛也，其主心也（2）；**肝之合筋**也，其荣爪也，其主肺也（3）；**脾之合肉**也，其荣唇也，其主肝也（4）；**肾之合骨**也，其荣发也，其主脾也（5）。
+> **心之合脉**也，其荣色也，其主肾也；**肺之合皮**也，其荣毛也，其主心也；**肝之合筋**也，其荣爪也，其主肺也；**脾之合肉**也，其荣唇也，其主肝也；**肾之合骨**也，其荣发也，其主脾也。
 >
-> 《素问·五藏生成篇》
+> ——《素问•五藏生成篇》
 
 > 初持脉，如三菽之重，与皮毛相得者，肺部也。如六菽之重，与血脉相得者，心部也。如九菽之重，与肌肉相得者，脾部也。如十二菽之重，与筋平者，肝部也。按之至骨，举指来疾者，肾部也。故曰轻重也。
 >
-> 《难经-五难》
+> ——《难经•五难》
 
 因此，五体的状态可以反应对应脏腑的状态，五体的衰弱多因对应脏腑的衰弱。现代的很多疾病，比如肌无力、血管瘤、骨质疏松等，从中医角度看，都要从脏腑中寻找根源。
 
@@ -357,9 +357,9 @@
 
 ### 题目
 
-1. 如果从天气、地气的角度划分阴阳，人体的血、津液、形属于-----气，为阴；人体的气态物质包括宗气、营卫之气属于天气，为阳。
-2. 营气源于脾胃，从----焦注入手太阴肺脉，然后按照十二经顺序依次流转，一日夜行多少周？----（填大写数字）。营气与津液混合就成为------
-3. 卫气根源于---焦，资生于----焦，宣发于----焦。白天循行于手足三----经二十五周，夜晚循行五脏二十五周，循行顺序是：肾、心、-----、-------、脾、肾。卫气日夜循行转换的关键点是目内眦的-----穴。
-4. 宗气、卫气、营气几种气态物质中，能保护肌表，抵抗寒冷的是----气；能帮助肺呼吸，推动血运行的是----气；作为饮食中的精微部分，能够营养全身的是-----气；能管理毛孔开合的是-----气。
-5. 人体地气五行中，肝、胆为木，心、小肠为-----，脾、胃为------，肺、大肠为------，肾、膀胱为-----。木气分阴阳的话，肝木为阴木，胆木为-----木。
-6. 在五脏与五华的对应关系中，爪（指甲）与---脏对应，面与---脏对应，唇与---脏对应，毛（表皮毫毛）与-----脏对应，发与----脏对应，可以通过观察五华初步判断五脏的健康状态。
+1. 如果从天气、地气的角度划分阴阳，人体的血、津液、形属于 __ __ 气，为阴；人体的气态物质包括宗气、营卫之气属于天气，为阳。
+2. 营气源于脾胃，从 __ __ 焦注入手太阴肺脉，然后按照十二经顺序依次流转，一日夜行多少周？ __ __ （填大写数字）。营气与津液混合就成为 __ __ 
+3. 卫气根源于 __ __ 焦，资生于 __ __ 焦，宣发于 __ __ 焦。白天循行于手足三 __ __ 经二十五周，夜晚循行五脏二十五周，循行顺序是：肾、心、 __ __ 、 __ __ 、脾、肾。卫气日夜循行转换的关键点是目内眦的 __ __ 穴。
+4. 宗气、卫气、营气几种气态物质中，能保护肌表，抵抗寒冷的是 __ __ 气；能帮助肺呼吸，推动血运行的是 __ __ 气；作为饮食中的精微部分，能够营养全身的是 __ __ 气；能管理毛孔开合的是 __ __ 气。
+5. 人体地气五行中，肝、胆为木，心、小肠为 __ __ ，脾、胃为 __ __ ，肺、大肠为 __ __ ，肾、膀胱为 __ __ 。木气分阴阳的话，肝木为阴木，胆木为 __ __ 木。
+6. 在五脏与五华的对应关系中，爪（指甲）与 __ __ 脏对应，面与 __ __ 脏对应，唇与 __ __ 脏对应，毛（表皮毫毛）与 __ __ 脏对应，发与 __ __ 脏对应，可以通过观察五华初步判断五脏的健康状态。
